--- a/i18n/de/docusaurus-plugin-content-docs/current/00_intro/20_data_life_cycle.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/00_intro/20_data_life_cycle.mdx
@@ -1,21 +1,21 @@
 ---
-title: "Data Life Cycle"
-slug: "/data_life_cycle"
+title: Lebenszyklus von Daten
+slug: /data_life_cycle
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# Research Data Life Cycle
+# Lebenszyklus von Forschungsdaten
 
-## Introduction
+## Einleitung
 
 <img alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10"/>
 
 In der wissenschaftlichen Arbeit ist die Sicherstellung einer [guten Forschungspraxis](https://doi.org/10.5281/zenodo.3923602) oberstes Gebot.
 
 Um dies zu gewährleisten, ist ein professioneller Umgang mit Forschungsdaten von besonderer Bedeutung. Zur Veranschaulichung des Umgangs mit Forschungsdaten gibt es verschiedene Modelle wie das [Domänenmodell](https://subs.emis.de/LNI/Proceedings/Proceedings257/55.pdf) oder das Lebenszyklusmodell für Forschungsdaten. Das Lebenszyklusmodell für Forschungsdaten beschreibt die Lebensdauer der Daten und darüber hinaus anhand verschiedener Phasen von der Planung bis zur Veröffentlichung oder bewussten Löschung. Für den Lebenszyklus von Forschungsdaten gibt es je nach Einrichtung, Geldgeber usw. unterschiedliche Ansätze für dasselbe Modell. Dem Datenlebenszyklus können unterschiedliche Prioritäten beigemessen werden. Der von [NFDI4Chem](https://www.nfdi4chem.de/) verfolgte Ansatz ist in der Abbildung auf der rechten Seite dargestellt.
-<!-- One possible approach is shown in figure 1. -->
 
+<!-- One possible approach is shown in figure 1. -->
 
 ## Phase 1: Experimentaufbau
 
@@ -39,14 +39,13 @@ In der 4. Phase geht es, wie der Name schon sagt, um die **Analyse und Interpret
 
 Bevor Sie Daten weitergeben, sollten Sie prüfen, ob die Daten einem **Urheberrechtsschutz oder anderen Schutzrechten** unterliegen. 
 
-
 ## Phase 5: Phase 5: Offenlegung/Veröffentlichung
 
-Während dieses Austauschs und der damit verbundenen Reflexion der Daten sollten Sie über die Archivierung und die Verwendung der Daten in wissenschaftlichen Publikationen nachdenken. Wenn Sie keine **Kriterien für die Archivierung** kennen und in Ihrer Arbeitsgruppe oder Ihrem Institut keine Kriterien festgelegt sind, können Entscheidungshilfen wie die vom DCC skizzierten ["5 steps to decide what data to keep"] (https://www.dcc.ac.uk/guidance/how-guides/five-steps-decide-what-data-keep) helfen. Anhand der festgelegten Kriterien wird entschieden, welche der gesammelten Rohdaten archiviert und welche bewusst gelöscht werden sollen.
+Während dieses Austauschs und der damit verbundenen Reflexion der Daten sollten Sie über die Archivierung und die Verwendung der Daten in wissenschaftlichen Publikationen nachdenken. Wenn Sie keine **Kriterien für die Archivierung** kennen und in Ihrer Arbeitsgruppe oder Ihrem Institut keine Kriterien festgelegt sind, können Entscheidungshilfen wie die vom DCC skizzierten ["5 steps to decide what data to keep"] \(https://www.dcc.ac.uk/guidance/how-guides/five-steps-decide-what-data-keep) helfen. Anhand der festgelegten Kriterien wird entschieden, welche der gesammelten Rohdaten archiviert und welche bewusst gelöscht werden sollen.
 
 Neben den Kriterien ist die Migration der Daten in **geeignete [Formate](/docs/format_standards) und auf geeignete Medien** wichtig für die Archivierung der Daten. In diesem Schritt sollten die Daten wiederum mit Metadaten angereichert werden, damit sie auch in Zukunft ohne weiteres Wissen über die Daten verstanden werden können.
-Neben der Archivierung spielt auch die [Veröffentlichung](/docs/data_publication) der Daten eine besondere Rolle. Viele Forschungsförderer erwarten, dass die Daten veröffentlicht werden, wenn nicht besondere Gründe dagegen sprechen, wie z.B. eine Geheimhaltungsvereinbarung oder die Aufnahme von personenbezogenen Daten. Für die Veröffentlichung von Daten wird ein **chemiespezifisches oder chemiebezogenes [Repositorium](/docs/repositories)** wie das [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch) oder [MassBank](https://massbank.eu/MassBank/) empfohlen. Eine Übersicht über Repositories findet sich z.B. bei [re3data.org](https://www.re3data.org/) oder [fairsharing.org](https://fairsharing.org/). re3data.org ermöglicht es, Repositories nach bestimmten Kriterien wie der Vergabe eines persistenten Identifikators oder des Zugangs zu filtern.
-
+Neben der Archivierung spielt auch die [Veröffentlichung](/docs/data_publication) der Daten eine besondere Rolle. Viele Forschungsförderer erwarten, dass die Daten veröffentlicht werden, wenn nicht besondere Gründe dagegen sprechen, wie z.B. Für die Veröffentlichung von Daten wird ein **chemiespezifisches oder chemiebezogenes [Repositorium](/docs/repositories)** wie das [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch) oder [MassBank](https://massbank.eu/MassBank/) empfohlen. Eine Übersicht über Repositories findet sich z.B. bei [re3data.org](https://www.re3data.org/) oder [fairsharing.org](https://fairsharing.org/). re3data.org ermöglicht es, Repositories nach bestimmten Kriterien wie der Vergabe eines persistenten Identifikators oder des Zugangs zu filtern.
+Die Veröffentlichung von Daten erfolgt häufig zu bestimmten Meilensteinen, zum Beispiel in Verbindung mit einer Textveröffentlichung oder am Ende eines Projekts. Die **endgültige Fassung des Datenverwaltungsplans** ist ebenfalls am Ende eines Projekts erforderlich.
 
 ## Phase 6: Wiederverwendung
 
@@ -54,13 +53,13 @@ In der Phase der Wiederverwendung erforschen Sie oder andere, wie die Daten in e
 
 Um diese Daten in den Kreislauf zurückführen zu können, ist es wichtig, dass diese Daten detailliert mit Metadaten beschrieben sind, eine ordentliche Dokumentation in Form eines DMP durchgeführt wurde und die Daten zitierfähig sind.
 
-Was ist das Potenzial Ihrer Daten?   
+Was ist das Potenzial Ihrer Daten?  
 
 ## Quellen und weitere Informationen
 
-- DFG Guidelines for Safeguarding Good Research Practice. Code of Conduct [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
-- [Introducing research data management as a service suite at RWTH Aachen University](https://dl.gi.de/handle/20.500.12116/894) <!--ISBN: 978-3-88579-651-0-->
-- [Review of data management lifecycle models](https://researchportal.bath.ac.uk/en/publications/review-of-data-management-lifecycle-models)
-- [DCC: 5 steps to decide what data to keep](https://www.dcc.ac.uk/guidance/how-guides/)
-- Deutsch: [Überblick zum Management von Forschungsdaten (FDM I) = Research Data Management - An Overview](https://doi.org/10.18154/RWTH-2019-06489)
-- Deutsch: [Forschungsdaten.info: Informieren und Planen](https://www.forschungsdaten.info/themen/informieren-und-planen/datenlebenszyklus/ )
+-   DFG-Leitfaden zur Sicherung guter Forschungspraxis. Verhaltenskodex [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
+-   [Einführung des Forschungsdatenmanagements als Dienstleistungsangebot an der RWTH Aachen] \(https://dl.gi.de/handle/20.500.12116/894) <!--ISBN: 978-3-88579-651-0-->
+-   [Überprüfung der Lebenszyklusmodelle für die Datenverwaltung] \(https://researchportal.bath.ac.uk/en/publications/review-of-data-management-lifecycle-models)
+-   [DCC: 5 Schritte zur Entscheidung, welche Daten aufbewahrt werden sollen] \(https://www.dcc.ac.uk/guidance/how-guides/)
+-   Deutsch: [Überblick zum Management von Forschungsdaten (FDM I) = Research Data Management - An Overview](https://doi.org/10.18154/RWTH-2019-06489)
+-   Deutsch: [Forschungsdaten.info: Informieren und Planen](https://www.forschungsdaten.info/themen/informieren-und-planen/datenlebenszyklus/)
