--- a/i18n/de/docusaurus-plugin-content-docs/current/00_intro/_category_.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current/00_intro/_category_.json
@@ -1,7 +1,7 @@
 {
-  "label": "Introduction",
+  "label": "Einführung",
   "link": {
-      "type"  : "doc",
-      "id" : "intro"
+    "type": "doc",
+    "id": "intro"
   }
 }
