--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/00_domain_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/00_domain_guide.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Domain Guide"
-slug: "/domain_guide"
-id: "domains_guide"
+title: Domänen-Leitfaden
+slug: /domain_guide
+id: domains_guide
 ---
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
@@ -9,16 +9,15 @@ import N4CFeatures from '/src/components/N4CFeatures.js';
 Sie suchen nach Informationen zur Verwaltung von Forschungsdaten in der Chemie? Wählen Sie Ihr chemisches Fachgebiet und finden Sie disziplinspezifische Hilfe zum Forschungsdatenmanagement.
 
 :::info Info:
-Die bereichsspezifischen Profile geben einen Überblick über die einzelnen FDM-Schritte. Die folgenden Themen werden im Detail vorgestellt:
 
-- Zusammenfassung des bereichsspezifischen Profils
-- Art der Experimente
-- Planung von Experimenten
-- Dokumentation der Experimente
-- Methoden der Datenerzeugung (einschließlich einer Tabelle mit Empfehlungen für interoperable offene Dateiformate)
-- Datenanalyse
-- Veröffentlichung von Forschungsdaten
-:::
+-   Zusammenfassung des bereichsspezifischen Profils
+-   Art der Experimente
+-   Planung von Experimenten
+-   Dokumentation der Experimente
+-   Methoden der Datenerzeugung (einschließlich einer Tabelle mit Empfehlungen für interoperable offene Dateiformate)
+-   Datenanalyse
+-   Veröffentlichung von Forschungsdaten
+    :::
 
 Klicken Sie auf eine der unten stehenden Schaltflächen, um mit Ihrem Chemiebereich zu beginnen. Die bereichsspezifischen Profile werden laufend auf der Grundlage neuer Entwicklungen und Rückmeldungen aktualisiert.
 
