--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/40_synthetic_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/40_synthetic_chemistry.mdx
@@ -1,7 +1,7 @@
 ---
-title: "Synthetic Organic / Inorganic Chemistry"
+title: Synthetic Organic / Inorganic Chemistry
 nfdi4chem-id: dsoic
-slug: "/synthetic_chemistry"
+slug: /synthetic_chemistry
 ---
 
 import Methods from '@site/src/components/Methods.js';
@@ -10,59 +10,58 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 <LbeChip title="inorganic chemistry" /><LbeChip title="organic chemistry" />
 
 :::info Summary:
- 
+
 Das Hauptziel eines synthetischen organischen oder anorganischen Chemikers besteht darin, die gewünschten Verbindungen zu synthetisieren. Dabei werden etablierte Methoden angewandt oder neue Synthesemethoden entwickelt. Ein typischer Arbeitsablauf beginnt mit der Planung der Experimente und Methoden. Anschließend werden die Experimente durchgeführt und die Forschungsdaten sowie die dazugehörigen Metadaten gesammelt. Sobald das Endprodukt vorliegt, wird es mit geeigneten Methoden analysiert, um die Eigenschaften des synthetisierten Materials zu bestimmen oder die Wirksamkeit der gewählten Synthesemethode zu ermitteln. Die Verarbeitung und Interpretation der gewonnenen Forschungsdaten führt zu einem Konzeptnachweis für eine bestimmte Reaktion, zu optimierten Bedingungen für zukünftige Experimente oder zum Upscaling.
-::: 
+:::
 
 ## Arten von Experimenten
 
-- Synthese: 
-    - Herstellung von organischen/anorganischen Substanzen.
-    - Versuche im kleinen Maßstab zum Screening/Optimierung der Reaktionsbedingungen.
-    - Upscaling von Reaktionen, um genügend Produkt für eine umfassende Charakterisierung oder als Ausgangsmaterial für nachfolgende Syntheseschritte zu erhalten.
+-   Synthese: 
+    -   Herstellung von organischen/anorganischen Substanzen.
+    -   Versuche im kleinen Maßstab zum Screening/Optimierung der Reaktionsbedingungen.
+    -   Upscaling von Reaktionen, um genügend Produkt für eine umfassende Charakterisierung oder als Ausgangsmaterial für nachfolgende Syntheseschritte zu erhalten.
 
-
-- Analyse:
-    - Produktcharakterisierung mit praktikablen Methoden (z. B. NMR-Spektroskopie, Massenspektrometrie, IR-Spektroskopie, UV/vis-Spektroskopie, Elementaranalyse).
-    - Bewertung der Screening-/Optimierungsbedingungen.
-    - um die gewünschten Produkteigenschaften zu untersuchen. 
-    - zur umfassenden Charakterisierung der Eigenschaften von Materialien.
+-   Analyse:
+    -   Produktcharakterisierung mit praktikablen Methoden (z. B. NMR-Spektroskopie, Massenspektrometrie, IR-Spektroskopie, UV/vis-Spektroskopie, Elementaranalyse).
+    -   Bewertung der Screening-/Optimierungsbedingungen.
+    -   um die gewünschten Produkteigenschaften zu untersuchen.
+    -   zur umfassenden Charakterisierung der Eigenschaften von Materialien.
 
 ## Planung von Experimenten
 
-- Die Umsetzung neu inspirierter Ideen wird durch frühere Arbeiten unterstützt, die in der lokalen Instanz des elektronischen Labornotizbuchs (z. B. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) der eigenen Forschungsgruppe ([Übersicht über ELNs für synthetische Chemiker](/docs/eln)), in wissenschaftlicher Literatur oder in Datensätzen, die in [Repositorien](/docs/repositories) (disziplinspezifischen Repositorien wie dem [Chemotion repository](https://www.chemotion-repository.net/welcome)) veröffentlicht wurden, gespeichert sind.
-- Die Versuchsplanung folgt einer logischen Reihenfolge, um ein bestimmtes Ziel zu erreichen, z. B. die Erhöhung der Ausbeute oder der Reinheit.
-- Die Planung wird durch Hinzufügen der experimentellen Details (z. B. Mengen und Zeitplanverfahren) abgeschlossen. Alle Metadaten werden in einem ELN (z. B. Chemotion ELN) einschließlich Referenzen dokumentiert.
+-   Die Umsetzung neu inspirierter Ideen wird durch frühere Arbeiten unterstützt, die in der lokalen Instanz des elektronischen Labornotizbuchs (z. B. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) der eigenen Forschungsgruppe ([Übersicht über ELNs für synthetische Chemiker](/docs/eln)), in wissenschaftlicher Literatur oder in Datensätzen, die in [Repositorien](/docs/repositories) (disziplinspezifischen Repositorien wie dem [Chemotion repository](https://www.chemotion-repository.net/welcome)) veröffentlicht wurden, gespeichert sind.
+-   Die Versuchsplanung folgt einer logischen Reihenfolge, um ein bestimmtes Ziel zu erreichen, z. B. die Erhöhung der Ausbeute oder der Reinheit.
+-   Die Planung wird durch Hinzufügen der experimentellen Details (z. B. Mengen und Zeitplanverfahren) abgeschlossen. Alle Metadaten werden in einem ELN (z. B. Chemotion ELN) einschließlich Referenzen dokumentiert.
 
 ## Dokumentation der Experimente
 
-- Die [Dokumentation der Forschungsdaten](/docs/data_documentation) und [Metadaten](/docs/metadata) erfolgt digital über ein ELN.
-- Die Versuchsbedingungen (z. B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN notiert.
-- Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. keine Datendateien) werden dem ELN-Eintrag des Experiments manuell hinzugefügt, was Aussehen, Ausbeute, Schmelzpunkt, optische Drehung oder TLC-Rf-Werte (ggf. mit Metadaten) umfassen kann.
-- Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten zum instrumentellen Setup.
-- Metadaten, die sich auf die erhaltenen Daten beziehen, wie z. B. die Temperatur oder das Lösungsmittel der Messung, müssen gemäß den Metadatenstandards bereitgestellt werden, z. B. x.
- 
+-   Die [Dokumentation der Forschungsdaten](/docs/data_documentation) und [Metadaten](/docs/metadata) erfolgt digital über ein ELN.
+-   Die Versuchsbedingungen (z. B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN notiert.
+-   Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. keine Datendateien) werden dem ELN-Eintrag des Experiments manuell hinzugefügt, was Aussehen, Ausbeute, Schmelzpunkt, optische Drehung oder TLC-Rf-Werte (ggf. mit Metadaten) umfassen kann.
+-   Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten zum instrumentellen Setup.
+-   die Temperatur oder das Lösungsmittel der Messung, müssen gemäß den Metadatenstandards bereitgestellt werden, z. B. x.
+
 ## Methoden der Datenerfassung
 
-- Daten können während des Versuchs oder nach dem Versuch durch Analyse des gewonnenen Produkts erhoben werden.
-- Manuell ermittelte Daten: Experimentelle Beobachtungen, Aussehen, Ausbeute, Schmelz-/Siedepunkt, optische Drehung, TLC-Rf-Werte, Brechungsindex usw.
-- Digitale Daten werden mit analytischen Geräten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
-- Rohdatendateien in [geschützten Dateiformaten](/docs/format_standards) sollten neben interoperablen [offenen Dateiformaten](/docs/format_standards) mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich auch in das ELN aufgenommen werden sollten. 
+-   Daten können während des Versuchs oder nach dem Versuch durch Analyse des gewonnenen Produkts erhoben werden.
+-   Manuell ermittelte Daten: Experimentelle Beobachtungen, Aussehen, Ausbeute, Schmelz-/Siedepunkt, optische Drehung, TLC-Rf-Werte, Brechungsindex usw.
+-   Digitale Daten werden mit analytischen Geräten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
+-   Rohdatendateien in [geschützten Dateiformaten](/docs/format_standards) sollten neben interoperablen [offenen Dateiformaten](/docs/format_standards) mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich auch in das ELN aufgenommen werden sollten.
 
 <Methods defaultProfile={"synthetic"} />
 
-:::note *This table will be continuously updated with new recommendations on interoperable open file formats.
+:::note \*This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
 
 ## Datenanalyse
 
-- Forschungsdaten werden im Chemotion ELN bearbeitet, analysiert und verglichen (auch mit Daten anderer Experimente).
-- Optional ist eine Vorverarbeitung der digitalen Daten mit der Software des Analysegerätes möglich, bevor die Daten in das Chemotion ELN übertragen werden (vgl. Datenerstellungsmethoden).
-- Eine detaillierte Ansicht, Auswertung und Interpretation der Ergebnisse erfolgt mit den Funktionen des Chemotion ELN. 
+-   Forschungsdaten werden im Chemotion ELN bearbeitet, analysiert und verglichen (auch mit Daten anderer Experimente).
+-   Optional ist eine Vorverarbeitung der digitalen Daten mit der Software des Analysegerätes möglich, bevor die Daten in das Chemotion ELN übertragen werden (vgl. Datenerstellungsmethoden).
+-   Eine detaillierte Ansicht, Auswertung und Interpretation der Ergebnisse erfolgt mit den Funktionen des Chemotion ELN.
 
 ## Veröffentlichung von Forschungsdaten
 
-- Zusätzlich zu einem Forschungsartikel in einer wissenschaftlichen Zeitschrift werden die zugrundeliegenden Forschungsdaten in einem Repositorium veröffentlicht und mit dem Artikel verknüpft, um ein Forschungsdatenmanagement gemäß den [FAIR Datengrundsätzen](/docs/fair) zu verwirklichen ([Best Practice Beispiele](/docs/best_practice)).
-- Die Veröffentlichung von Daten in einem Repository umfasst Rohdaten und verarbeitete Daten zur Wiederverwendung.
-- Die Nutzung des Chemotion ELN ermöglicht einen direkten Transfer von Forschungsdaten und den zugehörigen Metadaten in das Chemotion Repository. Anschließend werden diese Daten automatisch mit anderen Repositorien geteilt, z.B. [PubChem] (https://pubchem.ncbi.nlm.nih.gov/). Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien, wie z.B. dem [CCDC](https://www.ccdc.cam.ac.uk/) für kristallographische Daten, müssen die Daten aus dem Chemotion ELN exportiert und in die jeweilige Datenbank hochgeladen werden.
-- Für einen Datensatz wird von einem Repositorium ein [persistenter Identifikator](/docs/pid) (z.B. DOI) generiert (über [DataCite](https://datacite.org/) für das Chemotion-Repositorium), der in der Zeitschriftenpublikation oder entsprechenden Begleitinformationen angegeben wird, um die Datenpublikation mit dem Manuskript zu verknüpfen. 
+-   Zusätzlich zu einem Forschungsartikel in einer wissenschaftlichen Zeitschrift werden die zugrundeliegenden Forschungsdaten in einem Repositorium veröffentlicht und mit dem Artikel verknüpft, um ein Forschungsdatenmanagement gemäß den [FAIR Datengrundsätzen](/docs/fair) zu verwirklichen ([Best Practice Beispiele](/docs/best_practice)).
+-   Die Veröffentlichung von Daten in einem Repository umfasst Rohdaten und verarbeitete Daten zur Wiederverwendung.
+-   Die Nutzung des Chemotion ELN ermöglicht einen direkten Transfer von Forschungsdaten und den zugehörigen Metadaten in das Chemotion Repository. Anschließend werden diese Daten automatisch mit anderen Repositorien geteilt, z.B. [PubChem] \(https://pubchem.ncbi.nlm.nih.gov/). Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien, wie z.B. dem [CCDC](https://www.ccdc.cam.ac.uk/) für kristallographische Daten, müssen die Daten aus dem Chemotion ELN exportiert und in die jeweilige Datenbank hochgeladen werden.
+-   Für einen Datensatz wird von einem Repositorium ein [persistenter Identifikator](/docs/pid) (z.B. DOI) generiert (über [DataCite](https://datacite.org/) für das Chemotion-Repositorium), der in der Zeitschriftenpublikation oder entsprechenden Begleitinformationen angegeben wird, um die Datenpublikation mit dem Manuskript zu verknüpfen.
