--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/50_pharmaceutical_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/50_pharmaceutical_chemistry.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Medicinal / Pharmaceutical Chemistry"
-slug: "/pharmaceutical_chemistry"
+title: Medicinal / Pharmaceutical Chemistry
+slug: /pharmaceutical_chemistry
 ---
 
 import Methods from '@site/src/components/Methods.js';
@@ -8,26 +8,25 @@ import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 
 <LbeChip title="medicinal chemistry" /><LbeChip title="epidemiology" />
 
-
 :::info Summary:
 
 Die medizinische Chemie ist eine stark interdisziplinäre Disziplin, die auf Chemie basiert. Sie befasst sich mit der Entdeckung, Entwicklung, Identifizierung und Synthese biologisch aktiver Verbindungen, der Interpretation ihres Wirkmechanismus auf molekularer Ebene und dem Metabolismus der Wirkstoffe.
 Die Wechselwirkungen von Wirkstoffen mit ihren biologischen Zielen werden in silico (Chemoinformatik), in vitro und in vivo analysiert, um die Selektivität und das Potenzial im Hinblick auf ihre therapeutische Wirksamkeit und Sicherheit zu bestimmen.
 Arzneimittelchemiker bereiten geeignete Verbindungen für die biologische Bewertung vor und/oder wählen sie aus, die, falls sie sich als aktiv erweisen, als Leitverbindungen dienen könnten. Chemische Modifikationen zur Optimierung dieser Leitverbindungen führen im Idealfall zu vielversprechenden Kandidaten für präklinische Studien in der Arzneimittelentwicklung, denen möglicherweise klinische Studien folgen.
- 
+
 :::
 
 ## Arten von Experimenten
 
-- Synthese:
-  - Herstellung von Verbindungen einschließlich kombinatorischer Ansätze für die biologische Bewertung in geeigneten Testsystemen
-- Analyse:
-  - Charakterisierung von Zwischen- und Endprodukten
-  - Analyse von (quantitativen) Struktur-Wirkungs-Beziehungen, Molecular Modelling Studien
-- Biologische Bewertung, Aktivitätsprobe
+-   Synthese:
+    -   Herstellung von Verbindungen einschließlich kombinatorischer Ansätze für die biologische Bewertung in geeigneten Testsystemen
+-   Analyse:
+    -   Charakterisierung von Zwischen- und Endprodukten
+    -   Analyse von (quantitativen) Struktur-Wirkungs-Beziehungen, Molecular Modelling Studien
+    -   Biologische Bewertung, Aktivitätsprobe
 
 ## Planung von Experimenten
- 
+
 Es werden Testsysteme eingerichtet, entweder zielgerichtete oder phänotypische Proben, um Trefferverbindungen zu ermitteln. Alternativ können (potenzielle) Hit-Verbindungen aus verfügbaren Daten (z. B. Veröffentlichungen) oder durch virtuelles Screening ausgewählt werden.
 Ausgehend von vielversprechenden Hit-Verbindungen werden Optimierungszyklen durchgeführt, um die Eigenschaften der Ausgangsverbindungen zu verbessern. Um die notwendigen Daten zur Bewertung der Eigenschaften der Verbindungen zu erhalten, sind geeignete Testsysteme erforderlich. Dazu gehören Potenz, Wirksamkeit, Selektivität, potenzielle Verzerrung, Wasserlöslichkeit, Lipophilie, pharmakokinetische Eigenschaften, z. B. Bioverfügbarkeit und metabolische Stabilität, Interaktion mit Leber-Cytochrom-P450-Enzymen, Interaktion mit dem hERG-Kanal, Zelltoxizität, potenzielle Genotoxizität usw. Die erforderlichen Eigenschaften hängen z. B. von der Indikation und dem Applikationsweg des Arzneimittels ab.
 
@@ -36,20 +35,20 @@ Ausgehend von vielversprechenden Hit-Verbindungen werden Optimierungszyklen durc
 Die [Dokumentation](/docs/data_documentation) von Forschungsdaten und [Metadaten](/docs/metadata) erfolgt vorzugsweise digital mit Hilfe eines geeigneten [ELN](/docs/eln) und/oder eines manuellen Laborjournals in Papierform.
 
 Verwendung eines ELN:
- 
-- Versuchsbedingungen und Messparameter werden im ELN notiert.
-- Beobachtungen, Abweichungen von geplanten Messprotokollen oder andere Besonderheiten während der Messung ohne digitale Ausgabe (d. h. ohne Datendateien) werden manuell in den ELN-Versuchseintrag eingetragen.
-- Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das ELN hochgeladen und direkt an den jeweiligen Experimenteintrag angehängt, einschließlich der Metadaten zum Instrumentenaufbau.
-- Die Metadaten zu den gewonnenen Daten entsprechen den üblichen Metadatenstandards.
+
+-   Versuchsbedingungen und Messparameter werden im ELN notiert.
+-   Beobachtungen, Abweichungen von geplanten Messprotokollen oder andere Besonderheiten während der Messung ohne digitale Ausgabe (d. h. ohne Datendateien) werden manuell in den ELN-Versuchseintrag eingetragen.
+-   Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das ELN hochgeladen und direkt an den jeweiligen Experimenteintrag angehängt, einschließlich der Metadaten zum Instrumentenaufbau.
+-   Die Metadaten zu den gewonnenen Daten entsprechen den üblichen Metadatenstandards.
 
 ## Methoden der Datenerfassung
 
-- Daten können während oder nach dem Experiment durch Analyse des erhaltenen Produkts erhoben werden.
-- Manuell ermittelte Daten: Experimentelle Beobachtungen, Aussehen, Ausbeute, Schmelz-/Siedepunkt, optische Drehung, TLC-Rf-Werte, Brechungsindex usw.
-- Digitale Daten werden mit analytischen Geräten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
-- Rohdatendateien in proprietären Dateiformaten sollten neben interoperablen [offenen Dateiformaten](/docs/format_standards) mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird ein Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten im Header von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich auch in das ELN aufgenommen werden sollten.
- 
+-   Daten können während oder nach dem Experiment durch Analyse des erhaltenen Produkts erhoben werden.
+-   Manuell ermittelte Daten: Experimentelle Beobachtungen, Aussehen, Ausbeute, Schmelz-/Siedepunkt, optische Drehung, TLC-Rf-Werte, Brechungsindex usw.
+-   Digitale Daten werden mit analytischen Geräten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
+-   Rohdatendateien in proprietären Dateiformaten sollten neben interoperablen [offenen Dateiformaten](/docs/format_standards) mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird ein Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten im Header von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich auch in das ELN aufgenommen werden sollten.
+
 <Methods defaultProfile={"pharma"} />
 
-:::note *This table will be continuously updated with new recommendations on interoperable open file formats.
+:::note \*This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
