--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/00_role_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/00_role_guide.mdx
@@ -1,21 +1,20 @@
 ---
-title: "Guide for Roles"
-slug: "/role_guide"
-id: "role_guide"
+title: Leitfaden für Rollen
+slug: /role_guide
+id: role_guide
 ---
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
 
-Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management issues.
+Suchen Sie nach Informationen über die Verwaltung von Forschungsdaten in der Chemie? Wählen Sie Ihre Rolle und finden Sie Lösungen für rollenspezifische Datenmanagementprobleme.
 
 :::info Info:
-The role pages provide an overview of the individual RDM steps. The following topics are presented in detail:
 
-- motivation
-- how to start
-- what RDM aspects are particularly relevant to your role
-:::
+-   Motivation
+-   So geht's los
+-   welche RDM-Aspekte für Ihre Rolle besonders relevant sind
+    :::
 
-Click on a button below to get started with your role.
+Klicken Sie auf eine der unten stehenden Schaltflächen, um mit Ihrer Rolle zu beginnen.
 
 <N4CFeatures feature="roles" />
