--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/10_research_group_leader.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/10_research_group_leader.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Research Group Leader"
-slug: "/research_group_leader"
+title: Gruppenleiter/in
+slug: /research_group_leader
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-:::info Applies to:
-This article applies to research group leaders, who plan to organise the RDM of their group.
+:::info Gilt für:
+Dieser Artikel richtet sich an Leiter/innen von Forschungsgruppen, die das RDM ihrer Gruppe organisieren wollen.
 :::
 
 ## Motivation
@@ -34,13 +34,13 @@ Von allen Chemikern arbeiten 60 % synthetisch. Es hat viele Vorteile, das ELN [C
 
 :::tip Die Vorteile von Chemotion
 
-- Kostenlos und transparent [Open-Source-Software] (https://github.com/ComPlat/chemotion_ELN)
-- Datenerfassung direkt aus der Planungsphase des Experiments
-- Automatische Erstellung von Versuchsberichten für Publikationen/Dissertationen durch die Software
-- Verbesserung der Zusammenarbeit und des Datenaustauschs innerhalb der Gruppe
-- Nahtloser Export von [FAIR](/docs/fair) und zitierfähigen Datensätzen in das [Chemotion Repository](https://www.chemotion-repository.net/welcome).
-- Integration der [SciFinder](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder) Suche
-- Viele Spektren können direkt in der Chemotion-Umgebung mit [ChemSpectra](https://eln.chemotion.net/chemspectra-editor) analysiert werden (einschließlich einer Plausibilitätsprüfung für NMR-Spektren)
+-   Kostenlos und transparent [Open-Source-Software] \(https://github.com/ComPlat/chemotion_ELN)
+-   Datenerfassung direkt aus der Planungsphase des Experiments
+-   Automatische Erstellung von Versuchsberichten für Publikationen/Dissertationen durch die Software
+-   Verbesserung der Zusammenarbeit und des Datenaustauschs innerhalb der Gruppe
+-   Nahtloser Export von [FAIR](/docs/fair) und zitierfähigen Datensätzen in das [Chemotion Repository](https://www.chemotion-repository.net/welcome).
+-   Integration der [SciFinder](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder) Suche
+-   Viele Spektren können direkt in der Chemotion-Umgebung mit [ChemSpectra](https://eln.chemotion.net/chemspectra-editor) analysiert werden (einschließlich einer Plausibilitätsprüfung für NMR-Spektren)
 
 **Wenn Sie Ihre eigene Chemotion-Instanz betreiben, behalten Sie die Kontrolle über Ihre eigenen Daten**
 
@@ -48,7 +48,7 @@ Von allen Chemikern arbeiten 60 % synthetisch. Es hat viele Vorteile, das ELN [C
 
 :::info Info:
 
-Das [Chemotion-Einführungsvideo] (https://www.youtube.com/watch?v=tZHaP6DW-Dw) gibt einen guten Überblick über Chemotion als Werkzeug für das Forschungsdatenmanagement.
+Das [Chemotion-Einführungsvideo] \(https://www.youtube.com/watch?v=tZHaP6DW-Dw) gibt einen guten Überblick über Chemotion als Werkzeug für das Forschungsdatenmanagement.
 
 :::
 
@@ -57,4 +57,3 @@ Wenn Sie bereits mit einem anderen ELN arbeiten oder es vorziehen, beim traditio
 MS-Daten können bei [MassBank](https://massbank.eu/MassBank) hinterlegt werden. Mit [nmrXiv](https://docs.nmrxiv.org/) befindet sich ein ähnliches Repositorium für NMR-Daten derzeit im Aufbau. Computergestützte Daten sind unter [ioChem-BD](https://www.iochem-bd.org/) gut aufbewahrt.
 
 Eine wachsende Liste empfohlener Chemie-Repositorien finden Sie in unserem Abschnitt [how to choose the right repo](/docs/choose_repository).
-
