--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/20_research_group_member.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/20_research_group_member.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Research Group Member"
-slug: "/research_group_member"
+title: Research Group Member
+slug: /research_group_member
 ---
 
-# Mitglied der Forschungsgruppe
+# Research Group Member
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
@@ -29,16 +29,16 @@ Die Verwendung eines ELN für die Datenverarbeitung hat klare Vorteile (siehe [o
 
 :::tip Vorteile von Chemotion
 
-- [Data life cycle](/docs/data_life_cycle) vollständig abgedeckt - von der Versuchsplanung bis zur Veröffentlichung
-- Zeichnen von chemischen Strukturen-automatische Berechnung von Mengen und Ausbeuten
-- Viele Spektren können direkt in der Chemotion-Umgebung mit ChemSpectra ausgewertet werden
-- Experimentelle Informationen für den experimentellen Teil von Dissertationen oder Publikationen können von der Software generiert und exportiert werden - kein manuelles Peak-Listing erforderlich
-- Eine Plausibilitätsprüfung ist für NMR-Spektren verfügbar
-- SciFinder-Suche ist direkt integriert
-- Aufbau einer internen Datenbank, die die Zusammenarbeit und den Datenaustausch in der Gruppe fördert.
-- Nahtloser Export vom ELN zum Repository als FAIR-Datendepot mit einem [persistent identifier (DOI)](/docs/pid) für jedes Molekül
-- Benutzerverwaltung - Zugriffsrechte, gemeinsame Nutzung und Synchronisierung.
-- Die akademische Version ist kostenlos
+-   [Data life cycle](/docs/data_life_cycle) vollständig abgedeckt - von der Versuchsplanung bis zur Veröffentlichung
+-   Zeichnen von chemischen Strukturen-automatische Berechnung von Mengen und Ausbeuten
+-   Viele Spektren können direkt in der Chemotion-Umgebung mit ChemSpectra ausgewertet werden
+-   Experimentelle Informationen für den experimentellen Teil von Dissertationen oder Publikationen können von der Software generiert und exportiert werden - kein manuelles Peak-Listing erforderlich
+-   Eine Plausibilitätsprüfung ist für NMR-Spektren verfügbar
+-   SciFinder-Suche ist direkt integriert
+-   Aufbau einer internen Datenbank, die die Zusammenarbeit und den Datenaustausch in der Gruppe fördert.
+-   Nahtloser Export vom ELN zum Repository als FAIR-Datendepot mit einem [persistent identifier (DOI)](/docs/pid) für jedes Molekül
+-   Benutzerverwaltung - Zugriffsrechte, gemeinsame Nutzung und Synchronisierung.
+-   Die akademische Version ist kostenlos
 
 **Wenn Sie Ihre eigene Chemotion-Instanz betreiben, behalten Sie die Kontrolle über Ihre Daten.**
 
