--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/40_data_steward.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/40_data_steward.mdx
@@ -1,16 +1,15 @@
 ---
-title: "Data Steward"
-slug: "/data_steward"
+title: Data Steward
+slug: /data_steward
 ---
 
-# Datenverwalter
+# Data Steward
 
-Die Rolle des Datenverwalters ist in der Forschung relativ neu und befindet sich daher noch in der Entwicklung und Definition. Im Jahr 2019 wurde im [Abschlussbericht] (https://doi.org/10.5281/zenodo.3474630) des niederländischen Projekts mit dem Titel *Towards a community-endorsed data steward profession description for life science research* die Datenverwaltung wie folgt definiert:
+Die Rolle des Datenverwalters ist in der Forschung relativ neu und befindet sich daher noch in der Entwicklung und Definition. Im Jahr 2019 wurde im [Abschlussbericht] \(https://doi.org/10.5281/zenodo.3474630) des niederländischen Projekts mit dem Titel _Towards a community-endorsed data steward profession description for life science research_ die Datenverwaltung wie folgt definiert:
 
 > "Datenverwaltung ist die verantwortungsvolle Planung und Durchführung aller Aktionen mit digitalen Daten vor, während und nach einem Forschungsprojekt, mit dem Ziel, die Nutzbarkeit, Wiederverwendbarkeit und Reproduzierbarkeit der resultierenden Daten zu optimieren."
 
 Aus dieser Definition ergibt sich, dass ein Datenverwalter im weitesten Sinne damit beschäftigt ist, die Qualität der Forschungsdaten während des gesamten [Lebenszyklus der Forschungsdaten](/docs/data_life_cycle) durch Anwendung der [FAIR Data Principles](/docs/fair) sicherzustellen.
-
 
 ## Aufgaben und Fertigkeiten
 
@@ -21,25 +20,25 @@ Research Data Services an der TU Delft, mit den Worten zitiert:
 
 Dies zeigt, wie wichtig die Kommunikationsfähigkeiten eines Datenverwalters sind. 
 
-Datenverwalter können direkt an einem Institut arbeiten, aber in Deutschland sind viele von ihnen Teil größerer Verbundprojekte wie [Sonderforschungsbereiche] (https://www.dfg.de/en/research_funding/programmes/coordinated_programmes/collaborative_research_centres/) oder sogar Teil verschiedener [NFDI-Konsortien] (https://www.nfdi.de/?lang=en). Sie übernehmen oft die Rolle, die Bedürfnisse und Anforderungen einer bestimmten Forschungsgemeinschaft zu kommunizieren, so dass Entwickler in IT-Zentren, Universitätsbibliotheken, ELN-Anbietern und der NFDI maßgeschneiderte Lösungen für digitale Forschungsdaten erstellen können. In dem oben erwähnten Kochbuch werden mehrere Strategien zur Entwicklung und Einsetzung von Datenverwaltern skizziert. Eines der vorgestellten Modelle ist der "rent-a-data-steward", der sich von den gängigen Modellen unterscheidet. Hier sind die Datenverwalter nicht dauerhaft in den Instituten angesiedelt, sondern werden für einen bestimmten Zeitraum an die Institute, Projekte etc. "ausgeliehen".
-Um Daten effizient zu verwalten und den Überblick zu behalten, können Datenverwalter einen [Datenmanagementplan](/docs/dmp) als unterstützendes Instrument verwenden.
+Datenverwalter können direkt an einem Institut arbeiten, aber in Deutschland sind viele von ihnen Teil größerer Verbundprojekte wie [Sonderforschungsbereiche] \(https://www.dfg.de/en/research_funding/programmes/coordinated_programmes/collaborative_research_centres/) oder sogar Teil verschiedener [NFDI-Konsortien] \(https://www.nfdi.de/?lang=en). Sie übernehmen oft die Rolle, die Bedürfnisse und Anforderungen einer bestimmten Forschungsgemeinschaft zu kommunizieren, so dass Entwickler in IT-Zentren, Universitätsbibliotheken, ELN-Anbietern und der NFDI maßgeschneiderte Lösungen für digitale Forschungsdaten erstellen können. In dem oben erwähnten Kochbuch werden mehrere Strategien zur Entwicklung und Einsetzung von Datenverwaltern skizziert. Eines der vorgestellten Modelle ist der "rent-a-data-steward", der sich von den gängigen Modellen unterscheidet. Hier sind die Datenverwalter nicht dauerhaft in den Instituten angesiedelt, sondern werden für einen bestimmten Zeitraum an die Institute, Projekte etc. "ausgeliehen".
+
+To efficiently manage data and maintain an overview, data stewards can use a [Data Management Plan](/docs/dmp) as a supporting tool.
 
 Kürzlich hat ein [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-gefördertes Projekt mit dem Titel [DataStew](https://www.ub.uni-koeln.de/forschen_publizieren/forschen/forschungsdaten_managen/datastew/index_ger.html) das Konzept der Datenverwaltung in der deutschen Hochschullandschaft analysiert und verschiedene Anforderungen der Interessengruppen identifiziert, um Empfehlungen für die Ausbildung und Schulung für diese Rolle geben zu können. Ähnlich wie im oben erwähnten niederländischen Projekt zeigen die ersten [Ergebnisse](https://doi.org/10.5281/zenodo.7327371) hier die vielfältigen Aufgabenbereiche von Datenverwaltern auf. Von der Beratung zu allgemeinen FDM-Diensten, der Entwicklung oder dem Ausbau von IT-Tools und Infrastruktur für FDM in der Forschung, der disziplinspezifischen Beratung, der Durchführung eigener datenfokussierter Forschung für bestimmte Disziplinen bis hin zur Übernahme von Koordinationsfunktionen gleicht selten eine Datenverwalterposition der anderen.
 
 ### Datenverwalter in der Chemie
 
-Chemische Forschung ist oft eine Kombination aus Beobachtungsdaten und digitalen Daten. Während der Schwerpunkt bei FDM und Data Stewardship in der Regel auf letzteren liegt - wie in der eingangs zitierten Definition betont -, kann der Aspekt der Beobachtungsdaten nicht ignoriert werden. Traditionell werden diese Informationen in handschriftlichen Laborprotokollen festgehalten. Hier müssen die Datenverwalter die Art der durchgeführten Laborarbeit verstehen und bei der Auswahl geeigneter ELNs zur Digitalisierung dieser Art von Informationen helfen. Für digitale Daten müssen die Datenverwalter die gemeinschaftsspezifischen Standards für Datenformate und [Mindestinformationen (MI) zu Metadaten](/docs/metadata) kennen. Mit diesem Wissen können sie bei der effizienten Implementierung von Daten-Workflows helfen, die den Datentransfer vom Gerät zu sicheren Speicherorten, die Konvertierung von Datenformaten und die Beschriftung von Metadaten automatisieren. Zum Beispiel kann [Chemotion ELN's Geräteintegration] (https://www.chemotion.net/chemotionsaurus/docs/device-integration) solche Arbeitsabläufe erleichtern, während die Daten direkt mit den im ELN aufgezeichneten Molekülen und Reaktionen verbunden werden. Solche Prozesse ermöglichen die Veröffentlichung eines gut dokumentierten [Datensatzes](/docs/data_publication) in [Repositorien](/docs/repositories) neben den in Zeitschriftenartikeln berichteten Ergebnissen.
+Chemische Forschung ist oft eine Kombination aus Beobachtungsdaten und digitalen Daten. Während der Schwerpunkt bei FDM und Data Stewardship in der Regel auf letzteren liegt - wie in der eingangs zitierten Definition betont -, kann der Aspekt der Beobachtungsdaten nicht ignoriert werden. Traditionell werden diese Informationen in handschriftlichen Laborprotokollen festgehalten. Hier müssen die Datenverwalter die Art der durchgeführten Laborarbeit verstehen und bei der Auswahl geeigneter ELNs zur Digitalisierung dieser Art von Informationen helfen. Für digitale Daten müssen die Datenverwalter die gemeinschaftsspezifischen Standards für Datenformate und [Mindestinformationen (MI) zu Metadaten](/docs/metadata) kennen. Mit diesem Wissen können sie bei der effizienten Implementierung von Daten-Workflows helfen, die den Datentransfer vom Gerät zu sicheren Speicherorten, die Konvertierung von Datenformaten und die Beschriftung von Metadaten automatisieren. Zum Beispiel kann [Chemotion ELN's Geräteintegration] \(https://www.chemotion.net/chemotionsaurus/docs/device-integration) solche Arbeitsabläufe erleichtern, während die Daten direkt mit den im ELN aufgezeichneten Molekülen und Reaktionen verbunden werden. Solche Prozesse ermöglichen die Veröffentlichung eines gut dokumentierten [Datensatzes](/docs/data_publication) in [Repositorien](/docs/repositories) neben den in Zeitschriftenartikeln berichteten Ergebnissen.
 
 ## Vernetzung und kontinuierliche Weiterbildung
 
-Aufgrund ihres breiten Aufgabenspektrums engagieren sich Datenverantwortliche kontinuierlich für die Vernetzung, den Austausch und die Weiterentwicklung des eigenen Wissens über FDM-Ansätze, Best Practices, Tools und Services. So veranstaltet die RWTH Aachen ein monatliches [Open RDM Network Meeting] (https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/), das sich an Datenverantwortliche richtet, und Landesinitiativen wie [fdm.nrw] (https://www.fdm.nrw/) bieten verschiedene Vernetzungs- und Fortbildungsmöglichkeiten. NFDI4Chem organisiert auch eine Einsteiger-Workshop-Reihe mit dem Titel [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) für Forscher und Datenverwalter gleichermaßen und konzentriert sich auf Konzepte und Werkzeuge des Forschungsdatenmanagements in der Chemie.
+Aufgrund ihres breiten Aufgabenspektrums engagieren sich Datenverantwortliche kontinuierlich für die Vernetzung, den Austausch und die Weiterentwicklung des eigenen Wissens über FDM-Ansätze, Best Practices, Tools und Services. So veranstaltet die RWTH Aachen ein monatliches [Open RDM Network Meeting] \(https://www.rwth-aachen.de/go/id/mkbr/file/9-6699/), das sich an Datenverantwortliche richtet, und Landesinitiativen wie [fdm.nrw] \(https://www.fdm.nrw/) bieten verschiedene Vernetzungs- und Fortbildungsmöglichkeiten. NFDI4Chem organisiert auch eine Einsteiger-Workshop-Reihe mit dem Titel [FAIR Research Data Management: Basics for Chemists](https://www.nfdi4chem.de/index.php/event/workshop-fair-research-data-management-basics-for-chemists/) für Forscher und Datenverwalter gleichermaßen und konzentriert sich auf Konzepte und Werkzeuge des Forschungsdatenmanagements in der Chemie.
 
 ## Quellen und weitere Informationen
 
-- [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
-- [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
-- [A community consultation on career tracks for data stewards - IDCC16 lightning talk and RDA VP17 poster presentation ![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4707028.svg)](https://doi.org/10.5281/zenodo.4707028)
-- German: [Aufgaben- und Kompetenzspektrum der Data Stewards an der RWTH Aachen University : generell und explizit am Beispiel des Sonderforschungsbereichs 1382](https://doi.org/10.17192/bfdm.2021.3.8352)
-- German: [Data Stewards an den TU9-Universitäten - Bestandsaufnahme, Handlungsfelder und Kooperationspotenzial](https://doi.org/10.17192/bfdm.2022.1.8364)
-- German: [Forschung unterstützen: Empfehlungen für Data Stewardship an akademischen Forschungsinstitutionen - Ergebnisse des Projektes DataStew](https://doi.org/10.5281/zenodo.7327371) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7327371.svg)](https://doi.org/10.5281/zenodo.7327371)
- 
+-   [Final report: Towards FAIR data steward as profession for the lifesciences. Report of a ZonMw funded collaborative approach built on existing expertise](https://doi.org/10.5281/zenodo.3474630) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3474630.svg)](https://doi.org/10.5281/zenodo.3474630)
+-   [Connie Clare, Maria Cruz, Elli Papadopoulou, James Savage, Marta Teperek, Yan Wang, Iza Witkowska, and Joanne Yeomans. 2019.Engaging Researchers with Data Management: The Cookbook (epub).OpenBookPublishers](https://doi.org/10.11647/OBP.0185)
+-   [A community consultation on career tracks for data stewards - IDCC16 lightning talk and RDA VP17 poster presentation ![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4707028.svg)](https://doi.org/10.5281/zenodo.4707028)
+-   German: [Aufgaben- und Kompetenzspektrum der Data Stewards an der RWTH Aachen University : generell und explizit am Beispiel des Sonderforschungsbereichs 1382](https://doi.org/10.17192/bfdm.2021.3.8352)
+-   German: [Data Stewards an den TU9-Universitäten - Bestandsaufnahme, Handlungsfelder und Kooperationspotenzial](https://doi.org/10.17192/bfdm.2022.1.8364)
+-   German: [Forschung unterstützen: Empfehlungen für Data Stewardship an akademischen Forschungsinstitutionen - Ergebnisse des Projektes DataStew](https://doi.org/10.5281/zenodo.7327371) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.7327371.svg)](https://doi.org/10.5281/zenodo.7327371)
