--- a/i18n/de/docusaurus-plugin-content-docs/current/30_data/00_data_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/30_data/00_data_guide.mdx
@@ -1,8 +1,7 @@
 ---
-title: "Guide for Handling Data"
-slug: "/data_guide"
-id : "data_guide"
-
+title: Guide for Handling Data
+slug: /data_guide
+id: data_guide
 ---
 
 import IntroButton from '@site/src/components/IntroButton.js'
@@ -11,9 +10,7 @@ import IntroButton from '@site/src/components/IntroButton.js'
 In diesem Abschnitt finden Sie Informationen und Ressourcen zu wichtigen Themen und zum Umgang mit Ihren Daten. Diese übergreifenden Konzepte liefern wichtige Informationen und Empfehlungen (z. B. welche Software für Sie nützlich sein könnte) und verweisen Sie auf andere geeignete Seiten innerhalb der Wissensdatenbank oder externe Ressourcen.
 :::
 
-
 ### Datenmanagementplan
-
 
 Ein Datenmanagementplan (DMP) beschreibt die Strategien und Maßnahmen für den Umgang mit Forschungsdaten während und nach einem Projekt. Sein Ziel ist es, die technischen, organisatorischen und rechtlichen Aspekte des Forschungsdatenmanagements in einem klar definierten Dokument im Voraus zu regeln und festzulegen. Erfahren Sie mehr über DMPs, wie man eines erstellt und welche Hilfsmittel es gibt:
 
