--- a/i18n/de/docusaurus-plugin-content-docs/current/30_data/10_dmp.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/30_data/10_dmp.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Data Management Plan"
-slug: "/dmp"
+title: Data Management Plan
+slug: /dmp
 ---
 
 import KbTagCloud from '@site/src/components/KbTagCloud.js';
@@ -19,22 +19,21 @@ Darüber hinaus befasst sich der Datenmanagementplan auch mit übergreifenden Th
 
 <KbTagCloud cloudTags={[ "Vorhandene Daten", "Format", "Metadaten", "Speicherung und Sicherung", "Sicherheit", "Verantwortung", "Rechte an geistigem Eigentum", "Zugang und gemeinsame Nutzung", "Zielgruppe", "Auswahl und Aufbewahrungsfristen", "Archivierung und Erhaltung", "Ethik und Datenschutz", "Budget", "Datenorganisation", "Qualitätssicherung", "Rechtliche Anforderungen" ]} min={20} max={35} shuffle={false} />
 
-
 ## Vorteile eines DMP
 
 Neben der Einhaltung der Vorschriften durch die Geldgeber sollte es auch eine intrinsische Motivation für ein DMP geben. Die Vorteile eines Datenmanagementplans liegen bei diesem Prozess auf der Hand. Ein DMP
 
-- unterstützt Ihre Forschung, weil die Daten auffindbar und verständlich sind. Sie sind in einem DMP klar beschrieben.
-- unterstützt die Daten, [FAIR](/docs/fair) zu sein. In einem DMP wird nicht nur die Auffindbarkeit abgebildet, sondern auch die Zugänglichkeit, Interoperabilität und Wiederverwendbarkeit beschrieben.
-- spart Ihnen langfristig Zeit, da alle notwendigen Informationen in einem DMP zusammengefasst sind.
-- hilft Ihnen, im Voraus zu denken und Fragen der Vertraulichkeit, der Ethik, der Sicherheit und des Urheberrechts gleich zu Beginn des Projekts zu berücksichtigen.
-- bietet Kontinuität des Wissens und seiner Weitergabe, wenn neue Projektmitglieder hinzukommen.
+-   unterstützt Ihre Forschung, weil die Daten auffindbar und verständlich sind. Sie sind in einem DMP klar beschrieben.
+-   unterstützt die Daten, [FAIR](/docs/fair) zu sein. In einem DMP wird nicht nur die Auffindbarkeit abgebildet, sondern auch die Zugänglichkeit, Interoperabilität und Wiederverwendbarkeit beschrieben.
+-   spart Ihnen langfristig Zeit, da alle notwendigen Informationen in einem DMP zusammengefasst sind.
+-   hilft Ihnen, im Voraus zu denken und Fragen der Vertraulichkeit, der Ethik, der Sicherheit und des Urheberrechts gleich zu Beginn des Projekts zu berücksichtigen.
+-   bietet Kontinuität des Wissens und seiner Weitergabe, wenn neue Projektmitglieder hinzukommen.
 
 ## DMP aus der Sicht der Förderer
 
-Eine Reihe von Forschungsförderern verlangen DMP in verschiedenen Phasen des Projekts. Das hängt vom jeweiligen Geldgeber ab. Die EU zum Beispiel erwartet ein DMP 6 Monate nach Projektbeginn, in der Mitte und am Ende des Projekts. Die EU bietet in ihrem Programm Horizon Europe seit Mai 2021 eine neue [DMP-Vorlage] (https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) zur Unterstützung der DMP-Erstellung an. 
+Eine Reihe von Forschungsförderern verlangen DMP in verschiedenen Phasen des Projekts. Das hängt vom jeweiligen Geldgeber ab. Die EU zum Beispiel erwartet ein DMP 6 Monate nach Projektbeginn, in der Mitte und am Ende des Projekts. Die EU bietet in ihrem Programm Horizon Europe seit Mai 2021 eine neue [DMP-Vorlage] \(https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan-template_he_en.docx) zur Unterstützung der DMP-Erstellung an. 
 
-Die deutschen Förderorganisationen regeln dies nicht so streng wie die EU. So verlangt das BMBF bei bestimmten Projekten einen sogenannten Verwertungsplan oder Angaben zur Nutzung der Ergebnisse als Teil des Antrags. Diese Forderung ist bereits in den Förderrichtlinien enthalten, zum Beispiel im Förderprogramm ["Küstenmeerforschung in Nord- und Ostsee - Küsten im Wandel"] (https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung). 
+Die deutschen Förderorganisationen regeln dies nicht so streng wie die EU. So verlangt das BMBF bei bestimmten Projekten einen sogenannten Verwertungsplan oder Angaben zur Nutzung der Ergebnisse als Teil des Antrags. Diese Forderung ist bereits in den Förderrichtlinien enthalten, zum Beispiel im Förderprogramm ["Küstenmeerforschung in Nord- und Ostsee - Küsten im Wandel"] \(https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung). 
 
 Die DFG bietet seit Juni 2021 eine [Checkliste](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html) zur Unterstützung im Umgang mit Forschungsdaten an. Diese Checkliste umfasst die gleichen Themen wie eine DMP-Vorlage, nämlich Datenbeschreibung, Dokumentation und Datenqualität, Speicherung und technische Archivierung des Projekts, rechtliche Verpflichtungen und Rahmenbedingungen, Datenaustausch und langfristige Datenverfügbarkeit sowie Verantwortlichkeiten und Ressourcen. Die DFG betont auch die Verwendung von fachspezifischen Empfehlungen zu Standards, Methoden und Infrastrukturen. Darüber hinaus macht die DFG auf ihrer Website eine klare Aussage. "... daher ist mit ihr ebenso sorgfältig umzugehen und eine technisch adäquate Option für eine spätere Wiederverwendung zu erwägen, wann immer dies sinnvoll und möglich ist. Gleiches gilt, wenn Software für die Erstellung oder Verarbeitung von Forschungsdaten benötigt wird. Die DFG erwartet daher, dass Forschungsprojekte eine Beschreibung des Umgangs mit Forschungsdaten enthalten. Die Beschreibung sollte sich an der Checkliste zum Umgang mit Forschungsdaten orientieren."
 
@@ -42,11 +41,11 @@ Die DFG bietet seit Juni 2021 eine [Checkliste](https://www.dfg.de/en/research_f
 
 Die Erstellung eines DMP kann durch verschiedene Tools unterstützt werden. Einige der gängigsten Tools sind:
 
-[DMP-Online] (https://dmponline.dcc.ac.uk/) wurde vom UK Digital Curation Centre (DCC) entwickelt. Es enthält eine Vorlage für Horizon Europe-Projekte sowie für die wichtigsten britischen Förderer. Außerdem enthält es kurze allgemeine Erklärungen zu jeder einzelnen Frage. DMPOnline und DMPTool basieren auf der Software DMPRoadmap.
+[DMP-Online] \(https://dmponline.dcc.ac.uk/) wurde vom UK Digital Curation Centre (DCC) entwickelt. Es enthält eine Vorlage für Horizon Europe-Projekte sowie für die wichtigsten britischen Förderer. Außerdem enthält es kurze allgemeine Erklärungen zu jeder einzelnen Frage. DMPOnline und DMPTool basieren auf der Software DMPRoadmap.
 
-[DMPTool] (https://dmptool.org/) wird von der California Digital Library betrieben. Aufgrund der unterschiedlichen Förderlandschaft in den USA ist das Tool für deutsche/europäische Projekte nur bedingt geeignet. Ein Vorteil ist, dass DMPTool auf der Website DMP-Beispiele bereitstellt. Es kann auch ohne das Tool genutzt werden.
+[DMPTool] \(https://dmptool.org/) wird von der California Digital Library betrieben. Aufgrund der unterschiedlichen Förderlandschaft in den USA ist das Tool für deutsche/europäische Projekte nur bedingt geeignet. Ein Vorteil ist, dass DMPTool auf der Website DMP-Beispiele bereitstellt. Es kann auch ohne das Tool genutzt werden.
 
-Der [Research Data Management Organiser (RDMO)] (https://rdmo.aip.de/) wird an 45 Forschungseinrichtungen in Deutschland und im Ausland betrieben (Stand Januar 2022). Er wurde in einem DFG-geförderten Projekt (2015-2020) entwickelt und wird nun von der Arbeitsgruppe RDMO als Open-Source-Software weiter gepflegt. Sie bietet mehrere "Fragenkataloge" für bestimmte Förderprogramme, Disziplinen oder Forschungskonsortien. Sie ermöglichen es Forschern, ihr Datenmanagement mit Hilfe von präzise formulierten Fragen, Hilfetexten und Multiple-Choice-Antworten zu organisieren. Die von den Nutzern erstellten Kataloge können wiederverwendet werden und stehen in einem [zentralen Repositorium] (https://github.com/rdmorganiser/rdmo-catalog) zum Download bereit.
+Der [Research Data Management Organiser (RDMO)] \(https://rdmo.aip.de/) wird an 45 Forschungseinrichtungen in Deutschland und im Ausland betrieben (Stand Januar 2022). Er wurde in einem DFG-geförderten Projekt (2015-2020) entwickelt und wird nun von der Arbeitsgruppe RDMO als Open-Source-Software weiter gepflegt. Sie bietet mehrere "Fragenkataloge" für bestimmte Förderprogramme, Disziplinen oder Forschungskonsortien. Sie ermöglichen es Forschern, ihr Datenmanagement mit Hilfe von präzise formulierten Fragen, Hilfetexten und Multiple-Choice-Antworten zu organisieren. Die von den Nutzern erstellten Kataloge können wiederverwendet werden und stehen in einem [zentralen Repositorium] \(https://github.com/rdmorganiser/rdmo-catalog) zum Download bereit.
 
 Um Forscher bei der Beantwortung der Fragen weiter zu unterstützen, haben sich Arbeitsgruppen gebildet, z.B. in Science Europe oder der Research Data Alliance (RDA). Die Science Europe Gruppe konzentriert sich auf die Verbesserung der allgemeinen Hilfetexte, während die Arbeitsgruppe in der RDA sich auf [disziplinspezifische Anleitungen] konzentriert (https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg). Science Europe hat im Januar 2021 eine neue Version des [praktischen Leitfadens](https://www.scienceeurope.org/our-resources/practical-guide-to-the-international-alignment-of-research-data-management/) erstellt. 
 
@@ -54,15 +53,15 @@ Ein Vergleich der gängigen DMP-Tools findet sich im [DMP-Toolguide](https://zen
 
 ## Quellen und weitere Informationen
 
-- [Elements of a Data Management Plan](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html)
-- [DFG guidelines on research data](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html)
-- [Practical Guide to the International Alignment of Research Data Management - Extended Edition](https://doi.org/10.5281/zenodo.4915862)
-- [RDA workgroup on discipline specific guidance on DMPs](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg)
-- [Horizon Europe DMP Template](https://ec.europa.eu/research/participants/data/ref/h2020/other/gm/reporting/h2020-tpl-oa-data-mgt-plan-annotated_en.pdf)
-- German: [Indications from the Federal Ministery of Education](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung)
-- German: [Data Management Plans at forschungsdaten.info](https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/) 
-- German: [Comparison of DMP tools at forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Management_Pl%C3%A4ne#Tools) 
-- [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)
-- [DMPOnline](https://dmponline.dcc.ac.uk/)
-- [DMPTool](https://dmptool.org/)
-- [RDMO](https://rdmo.aip.de/)
+-   [Elements of a Data Management Plan](https://www.icpsr.umich.edu/web/pages/datamanagement/dmp/elements.html)
+-   [DFG guidelines on research data](https://www.dfg.de/en/research_funding/principles_dfg_funding/research_data/index.html)
+-   [Practical Guide to the International Alignment of Research Data Management - Extended Edition](https://doi.org/10.5281/zenodo.4915862)
+-   [RDA workgroup on discipline specific guidance on DMPs](https://www.rd-alliance.org/groups/discipline-specific-guidance-data-management-plans-wg)
+-   [Horizon Europe DMP Template](https://ec.europa.eu/research/participants/data/ref/h2020/other/gm/reporting/h2020-tpl-oa-data-mgt-plan-annotated_en.pdf)
+-   German: [Indications from the Federal Ministery of Education](https://www.bmbf.de/bmbf/shareddocs/bekanntmachungen/de/2019/06/2463_bekanntmachung)
+-   German: [Data Management Plans at forschungsdaten.info](https://www.forschungsdaten.info/themen/informieren-und-planen/datenmanagementplan/) 
+-   German: [Comparison of DMP tools at forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Management_Pl%C3%A4ne#Tools) 
+-   [DMP-Toolguide (1.0)](https://doi.org/10.5281/zenodo.4632308)
+-   [DMPOnline](https://dmponline.dcc.ac.uk/)
+-   [DMPTool](https://dmptool.org/)
+-   [RDMO](https://rdmo.aip.de/)
