--- a/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/00_smartlab.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/00_smartlab.mdx
@@ -1,9 +1,8 @@
 ---
-title: "Smartlab"
-slug: "/smartlab"
-id: "smartlab"
+title: Smartlab
+slug: /smartlab
+id: smartlab
 ---
-
 
 import IntroButton from '@site/src/components/IntroButton.js';
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -12,12 +11,12 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 ![smartlab_flow](/img/smartlab/smartlab_flow2.png)
 
-Der Begriff "smartes Labor" bezieht sich nicht auf ein Labor, in dem Tablets in jeder Ecke zu finden sind. Das intelligente Labor steht für einen ganzheitlichen Ansatz für [Datenmanagement](/docs/data_guide) in der Chemie mit nahtlosen Datenflüssen. Was bedeutet das? Es bedeutet, dass alle Schritte innerhalb des [Arbeitsablaufs](/docs/domain_guide) eines Forschers über den [Lebenszyklus der Forschungsdaten](/docs/data_life_cycle) hinweg auf digitale Weise miteinander verbunden sind. Der wesentliche Unterschied zu einem [Labormanagementsystem (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) besteht darin, dass der Schwerpunkt des Smart Labs auf der Umsetzung der [FAIRen Datenprinzipien](/docs/fair) liegt. Zum Beispiel plant und [dokumentiert](/docs/data_documentation) ein Forscher sein Experiment in einem [Elektronischen Laborjournal (ELN)](docs/eln). Alle experimentellen Daten von Geräten wie z. B. Spektrometern werden dann über [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API) direkt in das ELN übernommen. 
+Das intelligente Labor steht für einen ganzheitlichen Ansatz für [Datenmanagement](/docs/data_guide) in der Chemie mit nahtlosen Datenflüssen. Was bedeutet das? Es bedeutet, dass alle Schritte innerhalb des [Arbeitsablaufs](/docs/domain_guide) eines Forschers über den [Lebenszyklus der Forschungsdaten](/docs/data_life_cycle) hinweg auf digitale Weise miteinander verbunden sind. Der wesentliche Unterschied zu einem [Labormanagementsystem (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) besteht darin, dass der Schwerpunkt des Smart Labs auf der Umsetzung der [FAIRen Datenprinzipien](/docs/fair) liegt. Zum Beispiel plant und [dokumentiert](/docs/data_documentation) ein Forscher sein Experiment in einem [Elektronischen Laborjournal (ELN)](docs/eln). Alle experimentellen Daten von Geräten wie z. B. Spektrometern werden dann über [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API) direkt in das ELN übernommen. 
 
 Das ELN ordnet dann idealerweise alle notwendigen [Metadaten](/docs/metadata) automatisch und passend zu einem entsprechenden Workflow zu und konvertiert proprietäre [Datenformate](/docs/format_standards) in offene Datenformate. Das ELN strukturiert die (Meta-)Daten und experimentellen Beschreibungen in einer sinnvollen und nachhaltigen Art und Weise, die sowohl von Menschen als auch von Maschinen lesbar ist (z. B. durch die Verwendung von [maschinenlesbaren chemischen Strukturen](/docs/machine-readable_chemical_structures). Wenn sich der Forscher für die [Veröffentlichung](/docs/data_publication) oder die [Archivierung](/docs/data_storage) seiner Daten entscheidet, werden diese nahtlos von einem [Repositorium](/docs/repositories) oder einem Archiv aufgenommen, ohne dass viel weitere Arbeit anfällt, da das ELN den Datensatz bereits entsprechend aufbereitet hat, damit er den [Anforderungen](/docs//choose_repository) eines Repositoriums oder Archivs entspricht. 
 
 In diesem Abschnitt werden Ihnen die wichtigsten Komponenten des Smart Labs vorgestellt.
 
-## Los geht's:
+## Get started:
 
 <IntroButton url={"/docs/eln"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Electronic Lab Notebooks"} />
