--- a/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/_category_.json
+++ b/i18n/de/docusaurus-plugin-content-docs/current/40_smartlab/_category_.json
@@ -1,7 +1,7 @@
 {
-  "label": "SmartLab",
+  "label": "Smartlab",
   "link": {
-    "type"  : "doc",
-    "id" : "smartlab"
+    "type": "doc",
+    "id": "smartlab"
   }
 }
