--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/50_data_articles.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/50_data_articles.mdx
@@ -1,14 +1,16 @@
 ---
-title: "Data Articles"
-slug: "/data_articles"
+title: Data Articles
+slug: /data_articles
 ---
-# Daten Artikel
+
+# Data Articles
 
 :::info Gilt für:
 Dieser Artikel gilt für Forscher mit einem Datensatz, der die Veröffentlichung eines begleitenden wissenschaftlichen Datenartikels in einer wissenschaftlichen Fachzeitschrift rechtfertigt.
 :::
 
 ## Motivation
+
 Viele Forschungseinrichtungen und auch die meisten Förderinstitutionen geben in ihren Empfehlungen zu [Datenmanagementplänen](/docs/dmp/) RDM-Richtlinien vor und empfehlen und fordern zunehmend die Erstellung solcher Pläne, um sicherzustellen, dass die Daten auf FAIRe Weise archiviert werden. Darüber hinaus [fördern oder fordern](https://forschungsdaten.info/fr/praxis-kompakt/english-pages/funder-guidelines/) viele Fördereinrichtungen die Veröffentlichung von FAIR-Daten.
 
 Forschungsdaten können in [Forschungsdaten-Repositorien](/docs/repositories/) in der Regel ohne Peer-Review veröffentlicht werden, wodurch die Datensätze zitierfähig werden. Der Wert der Forschungsdaten selbst nimmt jedoch zu und kann eine separate, von Fachkollegen begutachtete Veröffentlichung in einer wissenschaftlichen Zeitschrift rechtfertigen. 
@@ -21,7 +23,12 @@ Der erste Schritt besteht darin, festzustellen, ob der Datensatz/die Datensätze
 
 Datenartikel bestehen in der Regel aus einem Manuskript, das den wissenschaftlichen Hintergrund und eine detaillierte Beschreibung der verwendeten Materialien und Methoden enthält, sowie Links zu einem oder mehreren FAIR-Datensätzen, die in einem [Forschungsdaten-Repositorium](/docs/repositories/) über ihre [PID](/docs/PID/)s veröffentlicht sind. Die angewandten Maßnahmen zur Qualitätskontrolle können in dem Artikel hervorgehoben und die mögliche Wiederverwendung erläutert werden. 
 
-Der hinterlegte FAIR-Datensatz und das zitierfähige, von Fachleuten begutachtete Datenmanuskript verleihen den Daten die Anerkennung, die sie verdienen. 
+Together, the deposited FAIR dataset and the citable peer-reviewed data manuscript give the data the credits it deserves. 
+
 ## Weitere Informationen
 
-- Liste der Datenjournale auf Forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Journals)
+-   Liste der Datenjournale auf Forschungsdaten.org](https://www.forschungsdaten.org/index.php/Data_Journals)
+
+* * *
+
+Main authors: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661) and [ORCID:0000-0002-7899-71921](https://orcid.org/0000-0002-7899-7192)
