--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/51_lbe/10_datasets.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/51_lbe/10_datasets.mdx
@@ -1,11 +1,10 @@
 ---
-title: "Datasets"
+title: Datensätze
 hide_table_of_contents: true
-slug: "/datasets"
+slug: /datasets
 ---
 
 import Lbe from '@site/src/components/LeadByExample.js';
-
 
 # Beispielhafte Datensätze
 
@@ -13,6 +12,6 @@ import Lbe from '@site/src/components/LeadByExample.js';
 
 :::note
 
-*Diese Liste wird laufend mit weiteren Publikationsdatensatzpaaren aktualisiert.
+\*Diese Liste wird laufend mit weiteren Publikationsdatensatzpaaren aktualisiert.
 
 :::
