--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/00_topics_guide.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/00_topics_guide.mdx
@@ -1,9 +1,8 @@
 ---
-title: "Guide to Topics"
-slug: "/topics_guide"
-id: "topics_guide"
+title: Guide to Topics
+slug: /topics_guide
+id: topics_guide
 ---
-
 
 :::info Info:
 Die Rubrik Themen und Konzepte bietet themenspezifische Artikel zu ganz bestimmten Themen des Forschungsdatenmanagements und der Digitalisierung in der Chemie. Diese Rubrik ist zum leichteren Nachschlagen in weitere Kategorien untergliedert. 
@@ -15,7 +14,6 @@ Um sicherzustellen, dass die Daten dauerhaft referenziert und zitiert werden, ve
 
 Die Kommentierung der Daten mit maschinenlesbaren [Metadaten](63_data_description_annotation/10_metadata.mdx) spielt in nahezu alle Aspekte von FAIR hinein und stellt sicher, dass die Daten von Maschinen und Menschen gleichermaßen verstanden werden. Hierbei erweisen sich die Kernkonzepte von [Ontologien](/docs/ontology) im eigenen Forschungsgebiet als hilfreich.
 
-
 <details>
 <summary>Klicken Sie, um alle Kategorien zu erweitern</summary>
   
@@ -24,6 +22,5 @@ Die Kommentierung der Daten mit maschinenlesbaren [Metadaten](63_data_descriptio
 <a href="/docs/identifiers">Identifiers</a> <br />
 <a href="/docs/format_standards">Data Formats</a> <br />
 <a href="/docs/data_description_annotation">Datenbeschreibung und -anmerkung</a> <br />
-
 
 </details>
