--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/00_identifiers.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/00_identifiers.mdx
@@ -1,19 +1,26 @@
 ---
-title: "Identifiers"
-slug: "/identifiers"
-id: "identifiers"
+title: Identifiers
+slug: /identifiers
+id: identifiers
 ---
 
-# Bezeichner
+# Identifiers
 
-Identifikatoren sind in der Regel eindeutige Codes, die dazu dienen, etwas im materiellen oder digitalen Raum zu identifizieren. So kann beispielsweise eine Forschungsgruppe eine feste Methode zur Benennung von Proben innerhalb ihrer Projekte haben. Ein weiteres Beispiel aus der Chemie ist die [Chemical Abstracts Service (CAS) Registry Number] (https://www.cas.org/solutions/cas-custom-services/cas-registry-services), eine eindeutige Kennung, die jedem chemischen Stoff zugewiesen wird, der in der [CAS-Datenbank] (https://www.cas.org/support/documentation/cas-databases) indexiert ist. CAS-Nummern werden in der chemischen Literatur und in Datenbanken weithin verwendet und sind als internationaler Standard anerkannt.
+Identifiers are unique strings aimed to identify resources. 
 
+In der Datenverwaltung können Identifikatoren auch [persistente Identifikatoren (PIDs)](/docs/pid) wie digitale Objektidentifikatoren [DOIs](https://www.doi.org/) umfassen, um dauerhaft auf veröffentlichte Artikel und Forschungsdatensätze oder Software in [Repositories](/docs/repositories) zu verweisen. Auch [Electronic Lab Notebooks (ELNs)](/docs/eln) und [Archivierungssysteme](/docs/data_storage) verwenden in der Regel ein Kennzeichnungssystem.
 
-In der Datenverwaltung können Identifikatoren auch [persistente Identifikatoren (PIDs)](/docs/pid) wie digitale Objektidentifikatoren [DOIs](https://www.doi.org/) umfassen, um dauerhaft auf veröffentlichte Artikel und Forschungsdatensätze oder Software in [Repositories](/docs/repositories) zu verweisen. Auch [Electronic Lab Notebooks (ELNs)](/docs/eln) und [Archivierungssysteme](/docs/data_storage) verwenden in der Regel ein Kennzeichnungssystem. Speziell für die Chemie dienen [InChI](/docs/inchi)-Codes als maschinenlesbare Bezeichner für chemische Substanzen.
+Identifikatoren sind in der Regel eindeutige Codes, die dazu dienen, etwas im materiellen oder digitalen Raum zu identifizieren. So kann beispielsweise eine Forschungsgruppe eine feste Methode zur Benennung von Proben innerhalb ihrer Projekte haben. Ein weiteres Beispiel aus der Chemie ist die [Chemical Abstracts Service (CAS) Registry Number] \(https://www.cas.org/solutions/cas-custom-services/cas-registry-services), eine eindeutige Kennung, die jedem chemischen Stoff zugewiesen wird, der in der [CAS-Datenbank] \(https://www.cas.org/support/documentation/cas-databases) indexiert ist. CAS-Nummern werden in der chemischen Literatur und in Datenbanken weithin verwendet und sind als internationaler Standard anerkannt.
 
-Im Sinne der [FAIR data principles](docs/fair) sollten Identifikatoren maschinenlesbar sein und dazu beitragen, verwandte Daten miteinander zu verknüpfen. Beispielsweise hilft der Verweis auf den DOI des zugehörigen veröffentlichten Zeitschriftenartikels in den Metadaten eines Datensatzes, die Daten zu beschreiben und ihnen einen Kontext zu verleihen. 
+Im Sinne der [FAIR data principles](docs/fair) sollten Identifikatoren maschinenlesbar sein und dazu beitragen, verwandte Daten miteinander zu verknüpfen. Beispielsweise hilft der Verweis auf den DOI des zugehörigen veröffentlichten Zeitschriftenartikels in den Metadaten eines Datensatzes, die Daten zu beschreiben und ihnen einen Kontext zu verleihen. Please see the [Best Practice article](/docs/best_practice) for further details.
+
+Symbols are close relatives to identifiers, but while identifiers require a dubbing process, such as a resolver for PIDs, symbols apply in a more general sense as a mark to represent another entity.
 
 ## Quellen und weitere Informationen
 
-- [Der InChI-Code](https://doi.org/10.1021/acs.jchemed.8b00090)
-- Deutsch: [Forschungsdaten.info: Persistente Identifikatoren](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
+-   Deutsch: [Forschungsdaten.info: Persistente Identifikatoren](https://forschungsdaten.info/themen/veroeffentlichen-und-archivieren/persistente-identifikatoren/)
+-   [Der InChI-Code](https://doi.org/10.1021/acs.jchemed.8b00090)
+
+* * *
+
+Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
