--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/62_data_formats/10_ct_files.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/62_data_formats/10_ct_files.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Chemical Table File Formats"
-slug: "/ct_files"
+title: Chemical Table File Formats
+slug: /ct_files
 ---
- # Chemische Tabellendateiformate
+
+# Chemical Table File Formats
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
@@ -28,7 +29,8 @@ CTfiles wurden von MDL Information Systems entwickelt, das später von Symyx Tec
 
 ## Quellen und weitere Informationen
 
-- [CTfile-Formate, Standardisierung der Darstellung von Chemikalien](https://discover.3ds.com/ctfile-documentation-request-form)
+-   [CTfile-Formate, Standardisierung der Darstellung von Chemikalien](https://discover.3ds.com/ctfile-documentation-request-form)
 
-----
+* * *
+
 Hauptautor: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
