--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/62_data_formats/30_smiles.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/62_data_formats/30_smiles.mdx
@@ -1,8 +1,8 @@
 ---
-title: "SMILES"
-slug: "/smiles"
+title: SMILES
+slug: /smiles
 ---
- 
+
 ![Under Construction](/img/Constr_2bl.png)
 
 This article is under construction.
