--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
@@ -1,13 +1,19 @@
 ---
-title: "Data Description & Annotation"
-slug: "/data_description_annotation"
-id: "data_description_annotation"
+title: Data Description & Annotation
+slug: /data_description_annotation
+id: data_description_annotation
 ---
 
-# Beschreibung und Kommentierung von Daten
+# Data Description & Annotation
 
 Um einen Datensatz am besten zu verstehen, sei es für Sie selbst, Ihre Arbeitsgruppe oder andere in der wissenschaftlichen Gemeinschaft, muss er klar beschrieben werden. Zu diesem Zweck sind die Datenkommentierung und die Datenbeschreibung wichtige Aspekte der Datenverwaltung und -analyse. 
 
-Bei der Datenbeschreibung geht es darum, einen detaillierten Überblick über die Daten zu geben, einschließlich ihrer Merkmale, ihres Formats, ihrer Struktur und aller relevanten Zusammenhänge. Bei der Annotation von Forschungsdaten werden den Daten Beschriftungen oder Notizen hinzugefügt, um sie für die Analyse leichter verständlich und zugänglich zu machen. Durch die Verwendung umfangreicher maschinenlesbarer [Metadaten] (docs/metadata) können sowohl Menschen als auch Maschinen fundierte Entscheidungen über die Eignung der Daten für ihre Forschung treffen und sicherstellen, dass die Daten korrekt zugeordnet und zitiert werden.
+Bei der Datenbeschreibung geht es darum, einen detaillierten Überblick über die Daten zu geben, einschließlich ihrer Merkmale, ihres Formats, ihrer Struktur und aller relevanten Zusammenhänge. Bei der Annotation von Forschungsdaten werden den Daten Beschriftungen oder Notizen hinzugefügt, um sie für die Analyse leichter verständlich und zugänglich zu machen. Durch die Verwendung umfangreicher maschinenlesbarer [Metadaten] \(docs/metadata) können sowohl Menschen als auch Maschinen fundierte Entscheidungen über die Eignung der Daten für ihre Forschung treffen und sicherstellen, dass die Daten korrekt zugeordnet und zitiert werden.
 
-Darüber hinaus können Metadaten, die für die Datenbeschreibung oder -anmerkung verwendet werden, semantisch beschrieben werden, indem kontrollierte Vokabulare oder besser noch [Ontologien](/docs/ontology) verwendet werden, um Mehrdeutigkeit zu reduzieren und sie maschinenlesbar und maschinenverstehbar* zu machen. Dies erleichtert die Suche und das Auffinden von Datensätzen für Maschinen und Menschen gleichermaßen.
+Another aspect to consider is allow for data reuse is [data provenance](/docs/provenance), which can be part of the metadata. In the context of scientific data and data management, provenance means the documentation of where data material comes from and with which processes and methods it was produced. Hence, the concept of provenance is about trust, credibility and reproducibility of research and may include information such as creation date, persons creating, instruments used, software used and data processing methods applied.   
+
+Darüber hinaus können Metadaten, die für die Datenbeschreibung oder -anmerkung verwendet werden, semantisch beschrieben werden, indem kontrollierte Vokabulare oder besser noch [Ontologien](/docs/ontology) verwendet werden, um Mehrdeutigkeit zu reduzieren und sie maschinenlesbar und maschinenverstehbar\* zu machen. Dies erleichtert die Suche und das Auffinden von Datensätzen für Maschinen und Menschen gleichermaßen.
+
+* * *
+
+Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
