--- a/i18n/de/docusaurus-plugin-content-docs/current/10_domains/10_analytical_chemistry.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/10_domains/10_analytical_chemistry.mdx
@@ -1,14 +1,13 @@
 ---
-title: "Analytische Chemie"
+title: Analytische Chemie
 nfdi4chem-id: dac
-slug: "/analytische_chemie"
+slug: /analytische_chemie
 ---
 
 import Methods from '@site/src/components/Methods.js';
 import {LbeChip} from '@site/src/components/lbe/LbeElements.js';
 
 <LbeChip title="analytical chemistry" /><LbeChip title="chemometric" />
-
 
 :::info Summary:
 
@@ -20,63 +19,68 @@ Ein typischer Arbeitsablauf beginnt mit der Formulierung der Forschungsfrage und
 
 ### Probenahme
 
-- Sammeln von Materialien für die Analyse
-- Transport und Lagerung ohne Veränderung der Proben
-- Versuche im kleinen Maßstab zur Entwicklung/Optimierung von Ansätzen und Geräten
-- Upscaling von Methoden, um genügend Material für eine umfassende Analyse zu erhalten
+-   Sammeln von Materialien für die Analyse
+-   Transport und Lagerung ohne Veränderung der Proben
+-   Versuche im kleinen Maßstab zur Entwicklung/Optimierung von Ansätzen und Geräten
+-   Upscaling von Methoden, um genügend Material für eine umfassende Analyse zu erhalten
 
 ### Verarbeitung von Proben
 
-- Vorbereitung der Probe für die Analyse:
-    - Direkte Methoden: keine weitere Behandlung (z. B. pH, RFA, MALDI, direkte Infusion)
-    - Einzelne Methoden:
-        - Auflösen
-        - Extraktion
-        - Pulverisieren 
-    - Kombinierte Methoden:
-        - Extraktion und Anreicherung (z. B. Festphasenextraktion, Königswasseraufschluss, Verflüchtigung von Lösungsmitteln)
-        - Abtrennung von störenden Verbindungen (z. B. Chromatographie, Ausfällung)
-        - Chemische Umwandlung in messbare Form (z. B. Komplexierung, Derivatisierung)
-- Experimente im kleinen Maßstab zum Screening/Optimierung von Trennbedingungen und Upscaling
-- 
+-   Vorbereitung der Probe für die Analyse:
+    -   Direkte Methoden: keine weitere Behandlung (z. B. pH, RFA, MALDI, direkte Infusion)
+    -   Einzelne Methoden:
+        -   Auflösen
+        -   Extraktion
+        -   Pulverisieren 
+    -   Kombinierte Methoden:
+        -   Extraktion und Anreicherung (z. B. Festphasenextraktion, Königswasseraufschluss, Verflüchtigung von Lösungsmitteln)
+        -   Abtrennung von störenden Verbindungen (z. B. Chromatographie, Ausfällung)
+        -   Chemische Umwandlung in messbare Form (z. B. Komplexierung, Derivatisierung)
+-   Experimente im kleinen Maßstab zum Screening/Optimierung von Trennbedingungen und Upscaling
+
 ### Bestimmung und Bewertung
-- Produktcharakterisierung mit praktikablen Methoden (z. B. NMR-Spektroskopie, Massenspektrometrie, IR-Spektroskopie, UV/vis-Spektroskopie, Elementaranalyse)
-    - zur Identifizierung von Analyten (gezielte und nicht gezielte)
-    - zur Bewertung der Zusammensetzung von Gemischen
-    - zur Quantifizierung von Analyten
+
+-   Produktcharakterisierung mit praktikablen Methoden (z. B. NMR-Spektroskopie, Massenspektrometrie, IR-Spektroskopie, UV/vis-Spektroskopie, Elementaranalyse)
+    -   zur Identifizierung von Analyten (gezielte und nicht gezielte)
+    -   zur Bewertung der Zusammensetzung von Gemischen
+    -   zur Quantifizierung von Analyten
 
 ## Planung von Experimenten
-- Neue und wiederverwendete Analysemethoden und Forschungsideen werden aus früheren Arbeiten der eigenen Forschungsgruppe, aus der wissenschaftlichen Literatur, aus in [Repositorien](/docs/repositories) veröffentlichten Datensätzen und aus den Anforderungen öffentlicher Ausschreibungen für Forschungs-, Entwicklungs- und Demonstrationsprojekte abgeleitet.
-- Die Versuchsplanung folgt einer logischen Reihenfolge, um ein bestimmtes Ziel zu erreichen, wie z. B. analytische Selektivität und Empfindlichkeit oder, im Falle einer nicht zielgerichteten Analyse (z. B. in der Metabolomik), eine Abdeckung eines breiten physikalisch-chemischen Bereichs von Analyten.
-- Die Planung wird durch das Hinzufügen der experimentellen Details abgeschlossen. Alle [Metadaten](/docs/metadata) werden in einem [ELN](/docs/eln) (z. B. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) einschließlich Referenzen [dokumentiert](/docs/data_documentation).
+
+-   Neue und wiederverwendete Analysemethoden und Forschungsideen werden aus früheren Arbeiten der eigenen Forschungsgruppe, aus der wissenschaftlichen Literatur, aus in [Repositorien](/docs/repositories) veröffentlichten Datensätzen und aus den Anforderungen öffentlicher Ausschreibungen für Forschungs-, Entwicklungs- und Demonstrationsprojekte abgeleitet.
+-   Die Versuchsplanung folgt einer logischen Reihenfolge, um ein bestimmtes Ziel zu erreichen, wie z. B. analytische Selektivität und Empfindlichkeit oder, im Falle einer nicht zielgerichteten Analyse (z. B. in der Metabolomik), eine Abdeckung eines breiten physikalisch-chemischen Bereichs von Analyten.
+-   Die Planung wird durch das Hinzufügen der experimentellen Details abgeschlossen. Alle [Metadaten](/docs/metadata) werden in einem [ELN](/docs/eln) (z. B. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) einschließlich Referenzen [dokumentiert](/docs/data_documentation).
 
 ## Dokumentation der Experimente
-- Die Dokumentation der Forschungsdaten und Metadaten erfolgt digital mit Hilfe eines ELN.
-- Die Versuchsbedingungen (z. B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN und, falls vorhanden, in einem Laborinformationssystem vermerkt.
-- Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. ohne Datendateien) werden manuell zum ELN-Eintrag des Versuchs hinzugefügt, der Temperaturen oder den pH-Wert (ggf. mit Metadaten) enthalten kann.
-- Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten für die instrumentelle Einrichtung.
-- Falls instrumentelle Metadaten nicht ohne Informationsverlust in ein offenes Format konvertierbar sind, müssen die Bedingungen im ELN dokumentiert werden.
-- Metadaten, die sich auf die erhaltenen Daten beziehen, wie z. B. Masse, Volumina oder Messlösungsmittel, müssen gemäß den [Metadatenstandards](/docs/format_standards) bereitgestellt werden.
+
+-   Die Dokumentation der Forschungsdaten und Metadaten erfolgt digital mit Hilfe eines ELN.
+-   Die Versuchsbedingungen (z. B. Lösungsmittel, Temperatur, Dauer, Druck) werden im ELN und, falls vorhanden, in einem Laborinformationssystem vermerkt.
+-   Beobachtungen und Ergebnisse von Analysemethoden ohne digitale Ausgabe (d. h. ohne Datendateien) werden manuell zum ELN-Eintrag des Versuchs hinzugefügt, der Temperaturen oder den pH-Wert (ggf. mit Metadaten) enthalten kann.
+-   Die von analytischen Instrumenten erhaltenen Daten (z. B. NMR-, MS- oder IR-Daten) werden in offenen Dateiformaten in das Chemotion ELN hochgeladen und direkt an den jeweiligen ELN-Experimenteintrag angehängt, einschließlich der Metadaten für die instrumentelle Einrichtung.
+-   Falls instrumentelle Metadaten nicht ohne Informationsverlust in ein offenes Format konvertierbar sind, müssen die Bedingungen im ELN dokumentiert werden.
+-   Masse, Volumina oder Messlösungsmittel, müssen gemäß den [Metadatenstandards](/docs/format_standards) bereitgestellt werden.
 
 ## Methoden der Datenerfassung
-- Daten können während des Versuchs oder nach dem Versuch durch Analyse des gewonnenen Produkts erhoben werden.
-- Manuell ermittelte Daten: Experimentelle Beobachtungen, Masse, Volumen, pH-Wert usw.
-- Digitale Daten werden mit analytischen Instrumenten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
-- Rohdatendateien in proprietären Dateiformaten sollten neben interoperablen offenen Dateiformaten mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich in das ELN aufgenommen werden sollten.
+
+-   Daten können während des Versuchs oder nach dem Versuch durch Analyse des gewonnenen Produkts erhoben werden.
+-   Manuell ermittelte Daten: Experimentelle Beobachtungen, Masse, Volumen, pH-Wert usw.
+-   Digitale Daten werden mit analytischen Instrumenten gewonnen. Die nachstehende Tabelle gibt einen Überblick über Dateierweiterungen, Dateigrößen und Konverter für verschiedene Analysemethoden.
+-   Rohdatendateien in proprietären Dateiformaten sollten neben interoperablen offenen Dateiformaten mit Hilfe von Konvertern oder der Software des Analysegeräts gespeichert werden. Wenn derzeit kein spezifisches offenes Format verfügbar ist, wird der Export als .txt oder .csv empfohlen. Bitte beachten Sie, dass die Metadaten in der Kopfzeile von .txt- oder .csv-Dateien möglicherweise nicht einem definierten (offenen) Format entsprechen und die Metadaten zusätzlich in das ELN aufgenommen werden sollten.
 
 <Methods defaultProfile={"synthetic"} />
 
-:::note *This table will be continuously updated with new recommendations on interoperable open file formats.
+:::note \*This table will be continuously updated with new recommendations on interoperable open file formats.
 :::
 
 ## Datenanalyse
-- Forschungsdaten können im [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) bearbeitet, analysiert und (auch mit Daten anderer Experimente) verglichen werden.
-- Optional ist eine Vorverarbeitung der digitalen Daten mit der Software des Analysegerätes möglich, bevor die Daten in das Chemotion ELN übertragen werden (vgl. Datenerstellungsmethoden).
-- Eine detaillierte Ansicht, Auswertung und Interpretation der Ergebnisse erfolgt mit den Funktionen des Chemotion ELN.
+
+-   Forschungsdaten können im [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) bearbeitet, analysiert und (auch mit Daten anderer Experimente) verglichen werden.
+-   Optional ist eine Vorverarbeitung der digitalen Daten mit der Software des Analysegerätes möglich, bevor die Daten in das Chemotion ELN übertragen werden (vgl. Datenerstellungsmethoden).
+-   Eine detaillierte Ansicht, Auswertung und Interpretation der Ergebnisse erfolgt mit den Funktionen des Chemotion ELN.
 
 ## Veröffentlichung von Forschungsdaten
-- Zusätzlich zu einem Forschungsartikel in einer wissenschaftlichen Zeitschrift werden die zugrundeliegenden Forschungsdaten in einem [Repositorium](/docs/repositories) [veröffentlicht](/docs/data_publication)  und mit dem Artikel verlinkt, um ein Forschungsdatenmanagement gemäß den [FAIR-Datengrundsätzen](/docs/fair) zu realisieren ([Best-Practice-Beispiele](/docs/best_practice)).
-- Die Veröffentlichung der Daten in einem Repositorium umfasst Rohdaten und verarbeitete Daten zur Wiederverwendung.
-- Die Nutzung des [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) ermöglicht einen direkten Transfer von Forschungsdaten und den dazugehörigen Metadaten in das [Chemotion Repositorium](https://www.chemotion-repository.net/welcome). Anschließend werden diese Daten automatisch mit anderen Repositorien, z.B. [PubChem](https://pubchem.ncbi.nlm.nih.gov/), geteilt. Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien, wie z.B. der [MassBank](https://massbank.eu/MassBank/) für Referenzmassenspektren, müssen die Daten aus dem Chemotion ELN exportiert und an die jeweilige Datenbank übermittelt werden.
-- Für einen Datensatz wird von einem Repositorium (z. B. [DataCite](https://datacite.org/) für das Chemotion Repositorium) ein [dauerhafter Identifikator](/docs/pid) (z. B. DOI) generiert, der in der Zeitschriftenpublikation oder in den entsprechenden Begleitinformationen angegeben wird, um die Datenveröffentlichung mit dem Manuskript zu verknüpfen.
 
+-   Zusätzlich zu einem Forschungsartikel in einer wissenschaftlichen Zeitschrift werden die zugrundeliegenden Forschungsdaten in einem [Repositorium](/docs/repositories) [veröffentlicht](/docs/data_publication)  und mit dem Artikel verlinkt, um ein Forschungsdatenmanagement gemäß den [FAIR-Datengrundsätzen](/docs/fair) zu realisieren ([Best-Practice-Beispiele](/docs/best_practice)).
+-   Die Veröffentlichung der Daten in einem Repositorium umfasst Rohdaten und verarbeitete Daten zur Wiederverwendung.
+-   Die Nutzung des [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) ermöglicht einen direkten Transfer von Forschungsdaten und den dazugehörigen Metadaten in das [Chemotion Repositorium](https://www.chemotion-repository.net/welcome). Anschließend werden diese Daten automatisch mit anderen Repositorien, z.B. [PubChem](https://pubchem.ncbi.nlm.nih.gov/), geteilt. Für die Veröffentlichung von Forschungsdaten in anderen disziplinspezifischen Repositorien, wie z.B. der [MassBank](https://massbank.eu/MassBank/) für Referenzmassenspektren, müssen die Daten aus dem Chemotion ELN exportiert und an die jeweilige Datenbank übermittelt werden.
+-   [DataCite](https://datacite.org/) für das Chemotion Repositorium) ein [dauerhafter Identifikator](/docs/pid) (z. B. DOI) generiert, der in der Zeitschriftenpublikation oder in den entsprechenden Begleitinformationen angegeben wird, um die Datenveröffentlichung mit dem Manuskript zu verknüpfen.
