--- a/i18n/de/docusaurus-plugin-content-docs/current/20_role/50_core_facility_manager.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/20_role/50_core_facility_manager.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Core facility manager"
-slug: "/core_facility_manager"
+title: Core facility manager
+slug: /core_facility_manager
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
@@ -23,7 +23,7 @@ Wenn man darüber nachdenkt, wie man Daten speichern und verfügbar machen kann,
 
 ### Die Situation in Deutschland
 
-Die Deutsche Forschungsgemeinschaft ([DFG](https://www.dfg.de)) fasst den Konsens über die *Grundprinzipien und Standards guter Praxis* in der Wissenschaft in ihrem Verhaltenskodex *Richtlinien zur Sicherung guter Forschungspraxis* [\[1\]](#dfg_code) zusammen. In Leitlinie 17 wird eine Aufbewahrung aller Forschungsdaten für den Zeitraum von zehn Jahren ab dem Datum der Veröffentlichung gefordert. Strategien zur Datenspeicherung sollten daher eine Langzeitspeicherung für mindestens diesen Zeitraum vorsehen.
+Die Deutsche Forschungsgemeinschaft ([DFG](https://www.dfg.de)) fasst den Konsens über die _Grundprinzipien und Standards guter Praxis_ in der Wissenschaft in ihrem Verhaltenskodex _Richtlinien zur Sicherung guter Forschungspraxis_ [\[1\]](#dfg_code) zusammen. In Leitlinie 17 wird eine Aufbewahrung aller Forschungsdaten für den Zeitraum von zehn Jahren ab dem Datum der Veröffentlichung gefordert. Strategien zur Datenspeicherung sollten daher eine Langzeitspeicherung für mindestens diesen Zeitraum vorsehen.
 
 ## Wie man anfängt
 
@@ -41,31 +41,31 @@ Darüber hinaus sollten [Sicherungsstrategien](/docs/data_storage/) für alle In
 
 Auch wenn die meiste wissenschaftliche Arbeit noch vor uns liegt, gibt es bereits in der frühen Phase der Probeneinreichung wertvolle Metadaten, die gesammelt und ausgewertet werden können. Dazu können unter anderem gehören:
 
-- Datum
-- Ersteller (Person, Gruppe)
-- Projekt
-- Kennung der Probe
-- Molekularstruktur(en) und abgeleitete Eigenschaften:
-    - Molekulare Formel
-    - Molekulargewicht
-    - Elementare Zusammensetzung
-    - Physikalisch-chemische Eigenschaften 
-- Lösungsmittel oder Löslichkeit
-- Reinheit
-- Experimentelle Informationen von Interesse, wie z. B.:
-    - Retationszeit
-    - Polarität
-    - Ionisierungsmethode
-    - NMR-Kerne und Experimente
-    - Chiroptische Daten
-- Biologische Eigenschaften
+-   Datum
+-   Ersteller (Person, Gruppe)
+-   Projekt
+-   Kennung der Probe
+-   Molekularstruktur(en) und abgeleitete Eigenschaften:
+    -   Molekulare Formel
+    -   Molekulargewicht
+    -   Elementare Zusammensetzung
+    -   Physikalisch-chemische Eigenschaften 
+-   Lösungsmittel oder Löslichkeit
+-   Reinheit
+-   Experimentelle Informationen von Interesse, wie z. B.:
+    -   Retationszeit
+    -   Polarität
+    -   Ionisierungsmethode
+    -   NMR-Kerne und Experimente
+    -   Chiroptische Daten
+-   Biologische Eigenschaften
 
-Die Aufbereitung dieser Metadaten gemäß den [FAIR-Leitprinzipien] (/docs/fair/) kann für zentrale Einrichtungen eine Herausforderung darstellen und lässt sich im Wesentlichen auf zwei mögliche Strategien zurückführen:
+Die Aufbereitung dieser Metadaten gemäß den [FAIR-Leitprinzipien] \(/docs/fair/) kann für zentrale Einrichtungen eine Herausforderung darstellen und lässt sich im Wesentlichen auf zwei mögliche Strategien zurückführen:
 
-1. **Parsing von Metadaten aus Datensätzen.** Dies erfordert relativ wenig organisatorischen Aufwand im Vorfeld, kann aber je nach den jeweiligen Datenformaten schwierig sein. Viele Gerätehersteller verwenden proprietäre Datenformate. Wenn alle Informationen, einschließlich der Beschreibung, in [Binärformaten] (https://en.wikipedia.org/wiki/Binary_file) gespeichert sind, kann die Extraktion von Metadaten eine Herausforderung darstellen.
-1. **Verwendung eines LIMS.** Die Verwendung eines [Labor-Informations-Management-Systems (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) ermöglicht es, alle mit der Probenverarbeitung verbundenen Prozesse effizient elektronisch zu organisieren. In gewisser Weise ist ein LIMS das Gegenstück zu einem [ELN](/docs/eln) in der Kerneinrichtung. Wenn ein LIMS verwendet wird, ist die Extraktion von Probenmetadaten wesentlich einfacher als durch nachträgliches Parsen. Das LIMS setzt jedoch voraus, dass es alle in der Einrichtung erforderlichen Prozesse abdeckt. Die Einrichtung eines LIMS in einer Kerneinrichtung kann daher eine komplexe organisatorische Aufgabe darstellen.
+1.  **Parsing von Metadaten aus Datensätzen.** Dies erfordert relativ wenig organisatorischen Aufwand im Vorfeld, kann aber je nach den jeweiligen Datenformaten schwierig sein. Viele Gerätehersteller verwenden proprietäre Datenformate. Wenn alle Informationen, einschließlich der Beschreibung, in [Binärformaten] \(https://en.wikipedia.org/wiki/Binary_file) gespeichert sind, kann die Extraktion von Metadaten eine Herausforderung darstellen.
+2.  **Verwendung eines LIMS.** Die Verwendung eines [Labor-Informations-Management-Systems (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) ermöglicht es, alle mit der Probenverarbeitung verbundenen Prozesse effizient elektronisch zu organisieren. In gewisser Weise ist ein LIMS das Gegenstück zu einem [ELN](/docs/eln) in der Kerneinrichtung. Wenn ein LIMS verwendet wird, ist die Extraktion von Probenmetadaten wesentlich einfacher als durch nachträgliches Parsen. Das LIMS setzt jedoch voraus, dass es alle in der Einrichtung erforderlichen Prozesse abdeckt. Die Einrichtung eines LIMS in einer Kerneinrichtung kann daher eine komplexe organisatorische Aufgabe darstellen.
 
 ## Quellen
 
-1. <a name="dfg_code"></a> Deutsche Forschungsgemeinschaft (DFG), <em>Guidelines for Safeguarding Good Research Practice. Code of Conduct</em>, September 2019, <a href="https://doi.org/10.5281/zenodo.3923602"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg" alt="DOI" /></a>
-2. <a name="sync"></a>See <a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/robocopy" target="_blank">Microsoft documentation</a> for <code>robocopy</code> or <a href="https://linux.die.net/man/1/rsync" target="_blank">manpage</a> for <code>rsync</code>.
+1.  <a name="dfg_code"></a> Deutsche Forschungsgemeinschaft (DFG), <em>Guidelines for Safeguarding Good Research Practice. Code of Conduct</em>, September 2019, <a href="https://doi.org/10.5281/zenodo.3923602"><img src="https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg" alt="DOI" /></a>
+2.  <a name="sync"></a>See <a href="https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/robocopy" target="_blank">Microsoft documentation</a> for <code>robocopy</code> or <a href="https://linux.die.net/man/1/rsync" target="_blank">manpage</a> for <code>rsync</code>.
