--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/10_repositories.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/10_repositories.mdx
@@ -1,77 +1,51 @@
 ---
-title: "Repositories"
+title: Research Data Repositories
 nfdi4chem-description: storage for preformatted data
 nfdi4chem-id: repositories
-nfdi4chem-tags: [data_organisation, data_storage, repositories]
-slug: "/repositories"
+nfdi4chem-tags:
+  - data_organisation
+  - data_storage
+  - repositories
+slug: /repositories
 ---
 
 ## Einleitung
 
-Repositorien sind Orte, an denen digitale Objekte gespeichert und der Öffentlichkeit oder Datennutzern zur Verfügung gestellt werden. Sie können als das Herzstück der gemeinsamen Datennutzung angesehen werden, da sie Plattformen für den Erwerb, die Speicherung, die Archivierung, die Veröffentlichung, die Kuratierung, die Bewahrung und den Zugang zu Daten bieten.
+Repositorien sind Orte, an denen digitale Objekte gespeichert und der Öffentlichkeit oder Datennutzern zur Verfügung gestellt werden. Sie können als das Herzstück der gemeinsamen Datennutzung angesehen werden, da sie Plattformen für den Erwerb, die Speicherung, die Archivierung, die Veröffentlichung, die Kuratierung, die Bewahrung und den Zugang zu Daten bieten. Pre-print servers can also be considered as repositories, although these are tailored toward scientific articles rather than research data.
 
 Repositorien können unterschiedlich klassifiziert werden nach:
 
-- der Art der zu speichernden Objekte (z. B. Publikationen oder Forschungsdaten),
-- dem Bereich der enthaltenen Daten (institutionell, fachspezifisch oder generisch)
-- der Speicherdauer der Daten (z.B. mindestens 10 Jahre) oder
-- die Datenzugangs- und -wiederverwendungspolitik
+-   der Art der zu speichernden Objekte (z. B. Publikationen oder Forschungsdaten),
+-   dem Bereich der enthaltenen Daten (institutionell, fachspezifisch oder generisch)
 
-Repositorien können ein institutioneller Publikationsserver, ein fachspezifisches Open-Access-Repositorium, ein fachspezifisches Datenrepositorium oder ein Langzeitarchiv für Daten und Publikationen sein.
+Repositories can be hosted at institutional servers or are provided by broader organisations or consortia such as NFDI4Chem. The use of repositories is essential for data deposition according to the [FAIR Data Principles](/docs/fair).
 
 ## Wie funktionieren Repositorien?
 
-Kuratoren prüfen die Daten vor der **Einstellung** in das Repositorium hinsichtlich ihres Inhalts oder ihrer Qualität und manchmal auch hinsichtlich ihrer rechtlichen Aspekte (Urheberrecht, Datenschutz) und stellen sicher, dass die Daten den Datennutzern direkt zur Verfügung stehen.
-
 Ein Repositorium besteht aus einer Repository-Software und einer Datenbank. Datenanbieter können die Daten in der Regel über eine webbasierte Benutzeroberfläche an das Repositorium übermitteln, oder die Betreiber des Repositoriums sammeln (**ernten**) die Daten automatisch von anderen Plattformen über geeignete Protokolle und Schnittstellen.
 
-Um eine Weiterverwendung der Daten durch Dritte zu ermöglichen, werden neben den eigentlichen Daten auch [Metadaten](/docs/metadata) benötigt. Sie beschreiben den Inhalt der Forschungsdaten und geben Auskunft über ihre Entstehung, die verwendete Software oder Methoden sowie rechtliche Aspekte. Metadaten können entweder manuell hinzugefügt oder durch andere Anwendungen bereitgestellt werden. Die Metadaten sollten auch Nutzungsbedingungen in Form von Lizenzen enthalten, die den Zugang zu den Daten regeln (Registrierung, Embargo, usw.).
+Some, but not all, repositories curate and review the data before **ingestion** with regard to their content and quality, sometimes also regarding legal aspects (copyright, data protection, [licenses](/docs/licenses)).
 
-In der Regel bieten Repositorien eine Suchfunktion, mit der Nutzer Daten finden, ansehen und herunterladen können. Um sicherzustellen, dass die Daten dauerhaft referenziert und zitiert werden, vergeben Repositorien eindeutige [persistent identifiers](/docs/pid) (PIDs). 
+Um eine Weiterverwendung der Daten durch Dritte zu ermöglichen, werden neben den eigentlichen Daten auch [Metadaten](/docs/metadata) benötigt. Sie beschreiben den Inhalt der Forschungsdaten und geben Auskunft über ihre Entstehung, die verwendete Software oder Methoden sowie rechtliche Aspekte. Metadaten können entweder manuell hinzugefügt oder durch andere Anwendungen bereitgestellt werden. Die Metadaten sollten auch Nutzungsbedingungen in Form von Lizenzen enthalten, die den Zugang zu den Daten regeln (Registrierung, Embargo, usw.). 
 
-## Das richtige Repositorium finden
-
-Aufgrund der Vielzahl der vorhandenen Repositorien können sich die Nutzer mit Hilfe eines Registers für Forschungsdaten-Repositorien (z. B. https://fairsharing.org/ oder https://www.re3data.org/) besser orientieren. Registerdienste für Repositorien sind ein wesentlicher Bestandteil der [FAIR](/docs/fair) (**F**indable **A**ccessible **I**nteroperable **R**eusable)-Strategie, da sie Forschern dabei helfen, sich in Tausenden von Repositorien zurechtzufinden, um das am besten geeignete Repositorium für die Speicherung und den Zugang zu ihren Forschungsergebnissen zu finden, und sie in die Lage versetzen, nach FAIR-Daten, die von anderen erstellt wurden, zu suchen und sie weiterzuverwenden. Der Repositorium-Finder von DataCite findet Repositorien, die die vom Enabling FAIR Data Project empfohlenen Kriterien erfüllen. ROAR und OPENDOAR sind Verzeichnisse, die Open-Access-Repositorien aus der ganzen Welt auflisten.
+In der Regel bieten Repositorien eine Suchfunktion, mit der Nutzer Daten finden, ansehen und herunterladen können. Um sicherzustellen, dass die Daten dauerhaft referenziert und zitiert werden, vergeben Repositorien eindeutige [persistent identifiers](/docs/pid) (PIDs). This also enhances the findability and accessibility of research data. 
 
 Repositorien können auch zertifiziert werden (z. B. CoreTrustSeal). Eine solche Zertifizierung garantiert den Datennutzern unter anderem, dass die Daten nutzbar, zitierfähig und langfristig erhalten sind. 
 
-Heutzutage verlangen immer mehr Peer-Review-Zeitschriften von den Autoren, dass sie ihre Daten vor der Einreichung des Manuskripts in Repositorien (z. B. figshare) hinterlegen. Wenn Autoren diese Regeln nicht einhalten, wird der Begutachtungsprozess nicht eingeleitet.
+## Das richtige Repositorium finden
 
-## Repositorien für die Chemie
+Aufgrund der Vielzahl der vorhandenen Repositorien können sich die Nutzer mit Hilfe eines Registers für Forschungsdaten-Repositorien (z. B. https://fairsharing.org/ oder https://www.re3data.org/) besser orientieren. Repository registry services are an essential component of the [FAIR Data Principles](/docs/fair) as they should help researchers navigate through thousands of data repository services to find the most appropriate repository for their data. 
 
-Im Bereich der synthetischen und analytischen Chemie wurde das Repositorium [Chemotion] (https://www.chemotion-repository.net/welcome) entwickelt, um die bestehende Lücke bei der Aufbewahrung und Veröffentlichung von experimentellen Arbeiten zu schließen. Chemotion unterstützt Wissenschaftler bei der Hinterlegung und gemeinsamen Nutzung von Daten auf strukturierte und transparente Weise. Es ist kostenlos und sein Softwarecode ist auf GitHub verfügbar. Es verwendet verfügbare standardisierte Identifikatoren wie den Reaktionscode **InChI** (RInChI und RInChIKey). Darüber hinaus ist es möglich, Daten aus einem Open Source [Elektronisches Laborjournal](/docs/eln) (ELN) in den Arbeitsbereich des Repositoriums zu übertragen. Die Hauptvorteile des Chemotion Repositoriums sind:
+However, due to complex landscape of existing repositories, these registries tend to provide confusingly long lists that do not necessarily facilitate the selection of a suitable repository. Moreover, researchers should take the reuse policy, metadata sharing and availability, long-term availability of data, and public accessibility of a repository into account, which is often not obvious or easy to figure out.
 
-- umfassende Funktionalität für die Sammlung, Aufbereitung und Wiederverwendung von Daten unter Verwendung disziplinspezifischer Methoden und Datenverarbeitungswerkzeuge
-- Vorhandensein von automatisierten Verfahren zur Erleichterung der Datenkuratierung
-- Bereitstellung von Funktionen für eine nahtlose Veröffentlichung und Zitierung der hinterlegten Daten
-- Unterstützung der [Digital Object Identifier](/docs/pid) (DOI)-Generierung, des Abgleichs der Einreichungen mit PubChem-Instanzen und der Arbeitsabläufe für das Peer-Reviewing der Einreichungen einschließlich Embargo-Einstellungen
-
-### Kern-Repositorien
-
-- [Chemotion Repositorium](https://www.chemotion-repository.net/welcome) Repositorium für Moleküle, Reaktionen und Forschungsdaten 
-- [MassBank EU](https://massbank.eu/MassBank/) Ökosystem von Datenbanken und Tools für Massenspektrometrie-Referenzspektren (Open Source)
-- [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/) Bietet ein kostenloses und zuverlässiges Zuhause für alle chemischen Forschungsdaten, die nicht den Spezifikationen anderer Repositorien entsprechen
-- [SUPRABANK](https://suprabank.org/) Kuratierte offene Ressource für intermolekulare Wechselwirkungen
-- [STRENDA DB](https://www.beilstein-strenda-db.org/) Standards für die Berichterstattung über enzymologische Daten
-
-### Zugehörige Repositorien und Datenbanken 
-
-- [CSD/CCDC](https://www.ccdc.cam.ac.uk/) Cambridge Structural Database 
-- [ICSD](https://icsd.fiz-karlsruhe.de/index.xhtml;jsessionid=0C3EFEDF8A88E145B9C25B0935E0E0EF) Datenbank für anorganische Kristallstrukturen
-
-### Andere relevante Repositorien und Datenbanken
-
-- [NOMAD](https://nomad-lab.eu/) FAIRer Austausch und Nutzung von materialwissenschaftlichen Daten 
-- [ioChem-BD](https://www.iochem-bd.org/) Repositorium für Ergebnisse der rechnergestützten Chemie 
-- [RADAR](https://www.radar-service.eu/radar/en/home) Repositorium für multidisziplinäre Forschungsdaten 
-- [Zenodo](https://zenodo.org/) Allgemein zugängliches Repositorium, das im Rahmen des europäischen Programms OpenAIRE entwickelt und vom CERN betrieben wird
-- [EUDAT CDI](https://www.eudat.eu/) Pan-European Netzwerk bestehend aus mehr als 25 Forschungsorganisationen, Daten- und Rechenzentren
-- [ChemSpider](https://www.chemspider.com/) Kostenlose Datenbank für chemische Strukturen, die schnellen Zugang zu über 100 Millionen Strukturen aus Hunderten von Datenquellen bietet
-- [PubChem](https://pubchem.ncbi.nlm.nih.gov/) Open chemistry Datenbank bei den National Institutes of Health (NIH)
+:::info Info:
+To ease the selection of a suitable research data repository for chemistry research data, NFDI4Chem provides a lists of trusted chemistry-friendly repositories in the guide on [how to choose the right repository](/docs/choose_repository).
+:::
 
 ## Quellen und weitere Informationen
-- https://www.rd-alliance.org/groups/repository-platforms-research-data.html
-- https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
-- Das Repositorium Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
-- Chemotion ELN: an open source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
-- Deutsch: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
+
+-   https://www.rd-alliance.org/groups/repository-platforms-research-data.html
+-   https://www.dcc.ac.uk/events/fairsfair-repository-support-series-using-registries-improve-visibility-your-repository
+-   Das Repositorium Chemotion: infrastructure for sustainable research in chemistry<br/>https://doi.org/10.1002/anie.202007702
+-   Chemotion ELN: an open source electronic lab notebook for chemists in academia<br/>https://doi.org/10.1186/s13321-017-0240-0
+-   German: \[Was ist ein Repositorium? Deutsch: [Forschungsdaten.info](https://www.forschungsdaten.info/themen/veroeffentlichen-und-archivieren/repositorien/)
