--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/60_data_availability_statement.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/60_data_availability_statement.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Data Availability Statement"
-slug: "/data_availability_statement"
+title: Data Availability Statement
+slug: /data_availability_statement
 ---
 
-# Datenverfügbarkeitserklärung
+# Data Availability Statement
 
 ## Einleitung
 
@@ -11,11 +11,13 @@ Die Erklärung zur Datenverfügbarkeit ist Teil des hinteren Teils eines Manuskr
 
 Die Datenverfügbarkeitserklärung ermöglicht die [Verlinkung des Manuskripts](/docs/data_publication) mit dem entsprechenden FAIR-Datensatz in Forschungsdaten-[Repositorien](/docs/repositories) über [DOIs](/docs/pid), alternativ unter Verwendung der repositoriumsspezifischen Identifikatoren oder Akzessionsnummern.
 
+Depending on the publisher, the data availability statement may be directly added to the manuscript submitted or is automatically added during manuscript submission via the respective publishers submission system.
+
+:::info Info:
+PIDs to the corresponding dataset(s) of a scientific article, with one of the scientific publishers, should be mentioned in the data availability statement, while PIDs to datasets from other researchers which are reused and cited should be added to the reference section. This distinction is important, because the link to the dataset in the PID metadata is differently set, depending whether the dataset is a directly related source of information or a referenced source as its information is reused.
+:::
+
 ## Templates for Data Availability Statements
-
-<strong>Daten in einem öffentlich zugänglichen Repositorium mit DOI</strong>
-
-Die im Rahmen dieser Studie generierten und analysierten Daten sind in [Repositoriumname] unter [DOI als URL] offen verfügbar.
 
 <strong>
 	Daten werden in einem öffentlich zugänglichen Repositorium mit DOI nach einem
@@ -25,6 +27,10 @@ Die im Rahmen dieser Studie generierten und analysierten Daten sind in [Reposito
 Die im Rahmen dieser Studie generierten und analysierten Daten werden nach einem Embargo ab dem Datum der Veröffentlichung in [Name des Repositorien] unter [DOI als URL] offen verfügbar sein
 
 <strong>Daten aus öffentlich zugänglichen Quellen</strong>
+
+Die im Rahmen dieser Studie generierten und analysierten Daten sind in [Repositoriumname] unter [DOI als URL] offen verfügbar.
+
+<strong>Daten in einem öffentlich zugänglichen Repositorium mit DOI</strong>
 
 Die Daten, die in dieser Studie verwendet wurden, sind in [Name des Repositoriums] unter [DOI als URL] frei zugänglich. Die Daten wurden aus öffentlich zugänglichen Quellen [Liste der Ressourcen] abgeleitet.
 
@@ -44,26 +50,25 @@ Die in dieser Studie erzeugten und analysierten Daten sind aus [Gründen, einsch
 
 <strong>
 	Die gemeinsame Nutzung von Daten ist nicht möglich, da keine neuen Daten
-	generiert werden.
-</strong>
+	generiert werden. </strong>
 
 Die gemeinsame Nutzung von Daten ist nicht anwendbar, da in dieser Studie keine neuen Daten generiert oder analysiert wurden.
 
-:::danger Notice:  
+:::danger Notice:\
 Bitte beachten Sie, dass Angaben zur Datenverfügbarkeit wie _'Daten sind auf Anfrage bei den Autoren verfügbar'_ und _'die Autoren haben sich entschieden, die Daten nicht weiterzugeben'_ unFAIR sind, da die Daten weder auffindbar noch zugänglich sind. Außerdem sind Angaben wie _'data available in supplementary material of the article'_ unFAIR, wenn die Daten in ergänzenden PDFs aufbewahrt werden, da diese Daten nicht interoperabel sind und daher schwer wiederverwendet werden können.
 :::
 
 ## Quellen und weitere Informationen
 
-- Datenfreigabe in PLOS One: Eine Analyse der Datenverfügbarkeitserklärungen](https://doi.org/10.1371/journal.pone.0194768)
-- Die Auswirkungen der Einführung von Datenverfügbarkeitserklärungen bei Nature Journals auf Autoren und Herausgeber](https://doi.org/10.2218/ijdc.v13i1.614)
-- Gemeinsame Erklärung über die Grundsätze der Datenzitation](https://doi.org/10.25490/a97f-egyk)
-- Datenzugangsausschuss - Europäisches Genom-Phänomen-Archiv](https://ega-archive.org/submission/data_access_committee)
+-   Datenfreigabe in PLOS One: Eine Analyse der Datenverfügbarkeitserklärungen](https://doi.org/10.1371/journal.pone.0194768)
+-   Die Auswirkungen der Einführung von Datenverfügbarkeitserklärungen bei Nature Journals auf Autoren und Herausgeber](https://doi.org/10.2218/ijdc.v13i1.614)
+-   Gemeinsame Erklärung über die Grundsätze der Datenzitation](https://doi.org/10.25490/a97f-egyk)
+-   Datenzugangsausschuss - Europäisches Genom-Phänomen-Archiv](https://ega-archive.org/submission/data_access_committee)
 
 \*Dieser Artikel steht unter einer Creative Commons Universal (CC0 1.0) Public Domain Dedication International License.
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
----
+* * *
 
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
