--- a/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/70_machine-readable_chemical_structures.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/50_data_publication/70_machine-readable_chemical_structures.mdx
@@ -1,23 +1,23 @@
 ---
-title: "Machine-Readable Chemical Structures"
-slug: "/machine-readable_chemical_structures"
+title: Machine-Readable Chemical Structures
+slug: /machine-readable_chemical_structures
 ---
- # Maschinenlesbare chemische Strukturen
+
+# Machine-Readable Chemical Structures
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-
 ## Einleitung
 
-Die Suche nach relevanten Artikeln auf der Grundlage von IUPAC-Namen oder Trivialnamen von Molekülen kann eine schwierige und zeitraubende Aufgabe sein, während chemische Strukturidentifikatoren eine eindeutige Identifizierung von Verbindungen ermöglichen. Das Neuzeichnen chemischer Strukturen ist arbeits- und zeitintensiv, während Dateien mit CT-Dateien ohne zusätzlichen Aufwand mit jeder gängigen Strukturzeichnungssoftware verwendet werden können.
+Die Suche nach relevanten Artikeln auf der Grundlage von IUPAC-Namen oder Trivialnamen von Molekülen kann eine schwierige und zeitraubende Aufgabe sein, während chemische Strukturidentifikatoren eine eindeutige Identifizierung von Verbindungen ermöglichen. Das Neuzeichnen chemischer Strukturen ist arbeits- und zeitintensiv, während Dateien mit CT-Dateien ohne zusätzlichen Aufwand mit jeder gängigen Strukturzeichnungssoftware verwendet werden können. 
 
 Die Bereitstellung maschinenlesbarer chemischer Strukturen als [CT-Dateien](/docs/ct_files) wie mol-Dateien, [InChI](/docs/inchi)-Strukturidentifikatoren und [SMILES](/docs/smiles)-Strukturcodes als Teil eines mit einem Forschungsartikel verbundenen Datensatzes verbessert dessen [Auffindbarkeit](/docs/fair), indem der Artikel leicht indizierbar und nach Strukturen durchsuchbar wird. Dies verbessert auch die [Interoperabilität](/docs/fair) und erleichtert die [Wiederverwendung](/docs/fair) der wissenschaftlichen Ergebnisse.
 
-Im Folgenden wird eine Anleitung gegeben, wie die Maschinenlesbarkeit von Chemie-Forschungsartikeln erhöht werden kann, chemische Strukturen in einem maschinenlesbaren Format innerhalb des zugehörigen Datensatzes bereitgestellt werden. Darüber hinaus werden Empfehlungen zur Bereitstellung von Strukturcodes und Identifikatoren in einer maschinenlesbaren Zusatztabelle innerhalb des zugehörigen Datensatzes, publiziert in einem generischen Repositorium, gegeben.
+Im Folgenden wird eine Anleitung gegeben, wie die Maschinenlesbarkeit von Chemie-Forschungsartikeln erhöht werden kann, chemische Strukturen in einem maschinenlesbaren Format innerhalb des zugehörigen Datensatzes bereitgestellt werden. Darüber hinaus werden Empfehlungen zur Bereitstellung von Strukturcodes und Identifikatoren in einer maschinenlesbaren Zusatztabelle innerhalb des zugehörigen Datensatzes, publiziert in einem generischen Repositorium, gegeben. 
 
-Während solche Informationen für strukturierte domänenspezifische Repositorien wie Chemotion Reopositoy nicht erforderlich sind, da diese Informationen von der Repository-Software bereitgestellt werden, profitieren Datensätze in generischen Repositorien von diesen Informationen.
+Während solche Informationen für strukturierte domänenspezifische Repositorien wie Chemotion Reopositoy nicht erforderlich sind, da diese Informationen von der Repository-Software bereitgestellt werden, profitieren Datensätze in generischen Repositorien von diesen Informationen. 
 
-Bitte beachten Sie, dass es derzeit noch Einschränkungen bei [SMILES](/docs/smiles) und [InChI](/docs/inchi) für anorganische und insbesondere metallorganische Verbindungen gibt.
+Bitte beachten Sie, dass es derzeit noch Einschränkungen bei [SMILES](/docs/smiles) und [InChI](/docs/inchi) für anorganische und insbesondere metallorganische Verbindungen gibt. Please also note that InChI is an identifier, while SMILES is a structure code. Conversion of SMILES to a chemical structure drawing and back to SMILES is possible, while this will not necessarily provide the same SMILES as initially provided, hence, SMILES is not an identifier. On the other hand, InChI is an identifier, while InChI is not designed to be used to regenerate the correct chemical structure drawing.  
 
 ## Mol-Dateien abrufen
 
@@ -29,7 +29,7 @@ Der Name der Datei kann in Anlehnung an Ihren Laborjournaleintrag und zusätzlic
 
 ### ChemDoodle
 
-Um SMILES, InChI und InChIKey in ChemDoodle abzurufen, markieren Sie eine Struktur und wählen dann Edit -> Copy As -> Daylight SMILES oder IUPAC InChI.
+Um SMILES, InChI und InChIKey in ChemDoodle abzurufen, markieren Sie eine Struktur und wählen dann Edit -> Copy As -> Daylight SMILES oder IUPAC InChI. 
 
 ![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemDoodle_SMILES_InChI_InChIKey.png)
 
@@ -39,7 +39,7 @@ Sie können auch eine Struktur auswählen und dann Struktur -> Generate Line Not
 
 Alternativ können Sie SMILES, InChI und InChIKey auch als Textdateien speichern, indem Sie File -> Save as -> Daylight SMILES oder InChI aus dem Dropdown-Menü wählen und anschließend -> Speichern.
 
-Wenn Sie "IUPAC InChI" wählen, wird auch der InChIKey angezeigt, wenn er in den Voreinstellungen aktiviert ist. Um InChIKey einzuschließen, wählen Sie Edit -> Preferences -> Files tab -> scrollen Sie nach unten und markieren Sie InChI key einschließen.
+Wenn Sie "IUPAC InChI" wählen, wird auch der InChIKey angezeigt, wenn er in den Voreinstellungen aktiviert ist. Um InChIKey einzuschließen, wählen Sie Edit -> Preferences -> Files tab -> scrollen Sie nach unten und markieren Sie InChI key einschließen. 
 
 ### ChemDraw Professional
 
@@ -55,9 +55,9 @@ Um SMILES, InChI und InChIKey in ACD/ChemSketch abzurufen, markieren Sie eine St
 
 ![ChemDoodle_SMILES_InChI_InChIKey](/img/topics/Screenshots_ChemSketch_SMILES_InChI_InChIKey.png)
 
-(ACD/ChemSketch v2021.1.1, Advanced Chemistry Development, Inc., Toronto, ON, Kanada, 2021).
+(ACD/ChemSketch v2021.1.1, Advanced Chemistry Development, Inc., Toronto, ON, Kanada, 2021). 
 
-Wenn Sie InChI für Structure auswählen, wird auch der InChIKey angezeigt, wenn er unter InChI Options aktiviert ist. Um den InChIKey einzubeziehen, wählen Sie Tools -> Generate -> InChI Option und markieren Sie InChI key.
+Wenn Sie InChI für Structure auswählen, wird auch der InChIKey angezeigt, wenn er unter InChI Options aktiviert ist. Um den InChIKey einzubeziehen, wählen Sie Tools -> Generate -> InChI Option und markieren Sie InChI key. 
 
 ### MarvinSketch
 
@@ -71,32 +71,35 @@ Alternativ können SMILES, InChI und InChIKey auch als Textdateien gespeichert w
 
 ## Maschinenlesbare Daten als ergänzende Tabelle bereitstellen
 
-Während Dateien direkt zum Datensatz hinzugefügt werden können, können zusätzliche Informationen zur Verbesserung der Maschinenlesbarkeit als [Zusatztabelle] (https://doi.org/10.1186/s13321-021-00520-4) bereitgestellt werden. Diese Tabelle sollte auch in einem maschinenlesbaren, textbasierten Format wie z. B. einer .csv-Datei bereitgestellt werden.
+Während Dateien direkt zum Datensatz hinzugefügt werden können, können zusätzliche Informationen zur Verbesserung der Maschinenlesbarkeit als [Zusatztabelle] \(https://doi.org/10.1186/s13321-021-00520-4) bereitgestellt werden. Diese Tabelle sollte auch in einem maschinenlesbaren, textbasierten Format wie z. B. einer .csv-Datei bereitgestellt werden.
 
 Es wird empfohlen, in dieser Tabelle folgenden Spalten einzufügen:
-- Nummern der Strukturen im Forschungsartikel, hier bezeichnet als local chemical sample symbols
-- Buchstabencode und Nummer in Ihrem Laborjournal, hier bezeichnet als local chemical structure identifiers.
-- SMILES
-- InChI und InChIKey
+
+-   Nummern der Strukturen im Forschungsartikel, hier bezeichnet als local chemical sample symbols
+-   Buchstabencode und Nummer in Ihrem Laborjournal, hier bezeichnet als local chemical structure identifiers.
+-   SMILES
+-   InChI und InChIKey
 
 Der Buchstabencode und die Nummer in Ihrem Laborjournal sollten enthalten sein, da analytische Daten häufig nach den Einträgen im Laborjournal benannt werden.
 
 Zusätzlich kann diese Tabelle noch weitere Spalten enthalten für:
-- IUPAC-Name
-- Synonyme, d. h. gebräuchliche Namen einer Verbindung
-- PubChem-Verbindungsidentifikator (PubChem CID)
-- CAS-Registernummer
-- Kommentar (falls erforderlich)
 
-PubChem-Verbindungsidentifikatoren (CIDs) sowie CAS-Registernummern lassen sich in [PubChem](https://pubchem.ncbi.nlm.nih.gov/) leicht durch eine Suche über SMILES, InChI oder InChIKey abrufen.
+-   IUPAC-Name
+-   gebräuchliche Namen einer Verbindung
+-   PubChem-Verbindungsidentifikator (PubChem CID)
+-   CAS-Registernummer
+-   Kommentar (falls erforderlich)
 
-Vorlagen für eine solche Tabelle werden als [.ods](/assets/Supplementary_table_template.ods), [.xlsx](/assets/Supplementary_table_template.xlsx) und [.csv](/assets/Supplementary_table_template.csv) Dateien bereitgestellt. Diese Vorlagendateien nutzen auch die Vorteile von [ontologies](/docs/ontology), um Begriffe für Menschen und Maschinen eindeutig zu identifizieren.
+PubChem-Verbindungsidentifikatoren (CIDs) sowie CAS-Registernummern lassen sich in [PubChem](https://pubchem.ncbi.nlm.nih.gov/) leicht durch eine Suche über SMILES, InChI oder InChIKey abrufen. 
+
+Vorlagen für eine solche Tabelle werden als [.ods](/assets/Supplementary_table_template.ods), [.xlsx](/assets/Supplementary_table_template.xlsx) und [.csv](/assets/Supplementary_table_template.csv) Dateien bereitgestellt. Diese Vorlagendateien nutzen auch die Vorteile von [ontologies](/docs/ontology), um Begriffe für Menschen und Maschinen eindeutig zu identifizieren. 
 
 Wenn die experimentelle Arbeit in einem [ELN](/docs/eln) dokumentiert ist, können diese Informationen auch vom ELN-System bereitgestellt werden. Chemotion ELN generiert [SMILES](/docs/smiles), [InChI](/docs/inchi), InChIKey sowie RInChI und RInChIKey für Verbindungen und Reaktionen. Diese Informationen sind auch im Chemotion Repository verfügbar, d.h. eine solche Zusatztabelle ist bei strukturierten domänenspezifischen Repositories wie Chemotion Repository nicht erforderlich, während Datensätze in generischen Repositories von einer solchen Tabelle profitieren.
 
-*Dieser Artikel steht unter einer Creative Commons Universell (CC0 1.0) Public Domain Dedication Lizenz.
+\*Dieser Artikel steht unter einer Creative Commons Universell (CC0 1.0) Public Domain Dedication Lizenz. 
 
 ![CC0 badge](https://licensebuttons.net/l/zero/1.0/88x31.png)
 
-----
+* * *
+
 Main author: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
