--- a/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/10_pid.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/60_topics/61_identifiers/10_pid.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Persistent Identifiers (PIDs)"
-slug: "/pid"
+title: Persistent Identifiers
+slug: /pid
 ---
 
-# Persistent Identifiers (PIDs)
-
 import useBaseUrl from '@docusaurus/useBaseUrl';
+
+# Persistent Identifiers (PIDs)
 
 [Persistent Identifiers](https://doi.org/10.5334/dsj-2017-009) (PIDs) sind eindeutige, dauerhafte Verweise auf identifizierte Quellen, wie z. B. Veröffentlichungen, Datensätze oder Personen, und ermöglichen das zuverlässige Auffinden, Identifizieren und Überprüfen der Referenzen.
 
@@ -17,12 +17,18 @@ Die Hauptvorteile von PIDs für Chemieforscher sind eine bessere Auffindbarkeit,
 
 <img align="left" src={useBaseUrl('/img/topics/DOI_logo.svg')} width="80" alt="DOI logo" vspace="2" hspace="20" />
 
-Digital Object Identifiers sind PIDs für Objekte wie Publikationen und Datensätze, aber auch physische Objekte, die von Mitgliedern der [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/) vergeben werden. Zu den bekanntesten DOI-Registrierungsstellen gehören [CrossRef](https://www.crossref.org/) für Publikationen und [DataCite](https://datacite.org/) mit Schwerpunkt auf [Datensätzen](https://doi.org/10.1109/COINFO.2009.66).
+Digital Object Identifiers sind PIDs für Objekte wie Publikationen und Datensätze, aber auch physische Objekte, die von Mitgliedern der [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/) vergeben werden. DOIs are resolved based on the [Handle System](https://www.handle.net/)to lead to the corresponding landing page and are assigned by members of the [International DOI Foundation](https://datascience.codata.org/articles/abstract/353/). Zu den bekanntesten DOI-Registrierungsstellen gehören [CrossRef](https://www.crossref.org/) für Publikationen und [DataCite](https://datacite.org/) mit Schwerpunkt auf [Datensätzen](https://doi.org/10.1109/COINFO.2009.66).
 
-Ein DOI besteht aus einer Zeichenkette, die durch einen Schrägstrich in zwei Teile geteilt wird. Der Präfix beginnt immer mit einer "10" und identifiziert den Registranten, der einen DOI von einer DOI-Registrierungsagentur abruft. Jeder Registrant hat sein eigenes eindeutiges Präfix. Das Suffix kennzeichnet ein bestimmtes Objekt, das von einem Registranten über eine Registrierungsagentur registriert wurde. DOIs werden am häufigsten als URL wie `https://doi.org/10.1000/182` angezeigt und enthalten einen Resolver als HTTP-Proxy-Server, der zum verlinkten Objekt weiterleitet. DOIs werden von der [Internationalen Organisation für Normung](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html) standardisiert.
+Ein DOI besteht aus einer Zeichenkette, die durch einen Schrägstrich in zwei Teile geteilt wird. Der Präfix beginnt immer mit einer "10" und identifiziert den Registranten, der einen DOI von einer DOI-Registrierungsagentur abruft. Jeder Registrant hat sein eigenes eindeutiges Präfix. Das Suffix kennzeichnet ein bestimmtes Objekt, das von einem Registranten über eine Registrierungsagentur registriert wurde. 
+
+DOIs werden am häufigsten als URL wie `https://doi.org/10.1000/182` angezeigt und enthalten einen Resolver als HTTP-Proxy-Server, der zum verlinkten Objekt weiterleitet. DOIs werden von der [Internationalen Organisation für Normung](https://www.iso.org/) (ISO) in [ISO 26324](https://www.iso.org/standard/43506.html) standardisiert.
 
 <p align="center"><img align="center" src={useBaseUrl("/img/topics/crossref-logo-landscape-200.svg")} width="200" alt="Crossref logo" />
 <img align="center" src={useBaseUrl("/img/topics/datacite.svg")} class="align-center" width="200" alt="DataCite logo" /></p>
+
+:::danger Notice:\
+Most importantly, domain-independent [metadata](/docs/metadata) also including [provenance information](/docs/provenance) is attached to the DOI. This metadata follows the metadata schemes provided by registration agencies such as the [CrossRef Metadata Schema](https://www.crossref.org/documentation/schema-library/) and the [DataCite Metadata Schema](https://schema.datacite.org/). 
+:::
 
 Registrierende sind [haftbar](https://support.datacite.org/docs/doi-registration-policy), die mit der DOI verbundene URL zu aktualisieren, wenn das Objekt verschoben wird, was durch die der DOI bei der Registrierung beigefügten Metadaten ermöglicht wird.
 
@@ -32,14 +38,23 @@ Registrierende sind [haftbar](https://support.datacite.org/docs/doi-registration
 
 [ORCID iDs](https://orchid.org/) sind offene und nicht-proprietäre PIDs für Autoren, die auch als eindeutige Autorenkennungen bezeichnet werden und von jedem Autor kostenlos abgerufen und genutzt werden können. Sie werden von der Non-Profit-Organisation ORCID Inc. zur Verfügung gestellt, die früher Open Research and Contributors ID Organisation hieß und sich aus den Gebühren der Mitgliedsorganisationen finanziert, die ihren Mitgliedern erweiterte Anwendungsprogrammschnittstellen (API) zur Integration von ORCID-Diensten zur Verfügung stellen.
 
-Eine ORCID iD ist ein [16-stelliger alphanumerischer Code] (https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier) zur eindeutigen Identifizierung von Autoren, während Autorennamen nicht immer eindeutig sind, sich ändern können oder je nach kulturellen Unterschieden unterschiedliche Ordnungskonventionen haben. ORCID iDs können als URL dargestellt werden, z.B. `https://orcid.org/0000-0000-0000-0000`, werden aber auch typischerweise ohne den Resolver als URN dargestellt, z.B. `ORCID:0000-0000-0000-0000`. ORCID iDs sind eine Untergruppe der International Standard Name Identifiers (ISNI), die von der [Internationalen Organisation für Normung](https://www.iso.org/) (ISO) als [ISO 27729](https://www.iso.org/standard/44292.html) bereitgestellt werden.
+Eine ORCID iD ist ein [16-stelliger alphanumerischer Code] \(https://support.orcid.org/hc/en-us/articles/360006897674-Structure-of-the-ORCID-Identifier) zur eindeutigen Identifizierung von Autoren, während Autorennamen nicht immer eindeutig sind, sich ändern können oder je nach kulturellen Unterschieden unterschiedliche Ordnungskonventionen haben. ORCID iDs können als URL dargestellt werden, z.B. `https://orcid.org/0000-0000-0000-0000`, werden aber auch typischerweise ohne den Resolver als URN dargestellt, z.B. `ORCID:0000-0000-0000-0000`. ORCID iDs sind eine Untergruppe der International Standard Name Identifiers (ISNI), die von der [Internationalen Organisation für Normung](https://www.iso.org/) (ISO) als [ISO 27729](https://www.iso.org/standard/44292.html) bereitgestellt werden.
 
 Der mit ORCID iDs verbundene [ORCID-Datensatz](https://doi.org/10.1038/462825a) umfasst die bibliografische Ausgabe und kann auch Informationen über Beschäftigung, Ausbildung und Qualifikation, eingeladene Positionen und Auszeichnungen, Mitgliedschaften sowie Dienstleistungen und Finanzierung enthalten, je nachdem, welche Datenschutzeinstellungen der Autor vorgenommen hat.
 
 Neben den ORCID iDs als nicht-proprietäre PIDs für Autoren gibt es auch proprietäre Autorenidentifikatoren wie die [Web of Science ResearcherID] von Thomson Reuters (https://www.researcherid.com/#rid-for-researchers) und die [Scopus Author ID] von Elsevier (https://www.scopus.com/freelookup/form/author.uri).
 
-## ePICs
+## Resarch Organisation Registry
+
 <!--![ePIC-Header](../../static/img/topics/EPIC-header_transparent.png)-->
+
+The Research Organisation Registry ([ROR](https://ror.org/)) provides persistent identifiers for research organisations, while names might not be unique, may change and organisations might be merged, split, shut down or re-emerge. ROR enables to connect research organisations to research outputs and their researchers by identifying their affiliations. 
+
+ROR should be provided in affiliations of researchers in scientific publications as well as for data publications. 
+
+ROR does support parent-child hierarchies as well as lateral relationships between organisations. An example might include a university having a child organisation such as a research institute [German: Fakultät] and related organisations such as a university hospital. However, ROR focuses on fundamental affiliations and is not focused on all subdivisions of an organisations such as departments [German: Institut] as high-level institutional information is more stable.
+
+## ePICs
 
 <img align="left" src={useBaseUrl("/img/topics/ePIC-head.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
 
@@ -49,11 +64,12 @@ Diese Art von PID führt in der Regel zu einer Landing Page, deren Inhalt vom PI
 
 ## Quellen und weitere Informationen
 
-- Englisch: [DOI-Grundlagen - DataCite](https://support.datacite.org/docs/doi-basics)
-- Deutsch: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
-- Deutsch: [Digitale Objektbezeichner - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
-- Deutsch: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
-- Englisch: [ePIC FAQs - PID Konsortium](https://www.pidconsortium.net/?page_id=1060)
+-   Englisch: [DOI-Grundlagen - DataCite](https://support.datacite.org/docs/doi-basics)
+-   Deutsch: [Persistent Identifiers - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/persistent-identifiers-pids/)
+-   Deutsch: [Digitale Objektbezeichner - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/digital-object-identifiers-dois/)
+-   Deutsch: [Open Research and Contributor ID (ORICD iD) - Technische Informationsbibliothek (TIB), Hannover](https://projects.tib.eu/pid-service/persistent-identifiers/open-researcher-and-contributor-id-orcid-id/)
+-   Englisch: [ePIC FAQs - PID Konsortium](https://www.pidconsortium.net/?page_id=1060)
 
-----
+* * *
+
 Hauptautor: [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
